--- a/content/cn/2019-12-16-training.md
+++ b/content/cn/2019-12-16-training.md
@@ -16,7 +16,7 @@ tags: []
 
 前面提到人是容易被训练的，这样的说法让我有自外于“人”的嫌疑，仿佛暗示我能跳出人的局限。其实我压根没有这个意思，我也是人，也是容易被训练的；以往的训练，不管是来自家长，老师，朋友，甚至是短暂接触的人，都在我身上留下了痕迹。我知道自己是不够坚强的，要是猛然暴露于某种会让我多巴胺分泌的环境，我多半也是流着一嘴哈喇子，听着铃铛响。容易被训练并不是人的缺点：训练---如果得当---是可以让人进步的；而且，有时做事还真需要一股非理性的劲儿。但如何“得当”呢？这是个问题。集体，不论是政府还是公司，有集体的利益。当它需要小民骂它的对手的时候，它不一定会顾忌发布片面的负面信息对个人形成判断是否“得当”；当它需要小民帮它传播广告的时候，它不一定能顾忌病毒似的信息传递对与人交往是否“得当”。好在我们似乎不必过于担心这些信息会对人造成太大的影响。信息如潮水般不断涌入人们的大脑，这一茬刚刷了遍脑子，还没回过味儿，下一茬又来了；人在信息的海洋里多数时间是在做布朗运动，被根号 N 约束着，跑偏也跑不了多远。   
 
-如前所说，技术的进步在个人和集体间的体现是不对等的；信息技术进步越大，这不对等也越加剧；技术是刀，小民是鱼，握着刀的是谁？握着刀的当然也是人，和小民差别本来不大的人；但刀越快，这差别就越明显。好吧，拐弯抹角地，原来是要把锅“扔”给技术啊！从工业革命到直到现在，技术发展一直是人类社会发展的动力，人不知道从技术进步里得了多少好处：抵御自然灾害和自身疾病的能力加强了，生活更稳定了，人口增多了，人均寿命增长了...我们占了技术大便宜，现在反过来怪技术，多少有点“吃饭砸锅”的意思呐。那怪握刀的人？这似乎也有点问题，因为人本来就是逐利的，几百年的人类进化在这一点上似乎还未改变太多东西；手里拿着算盘的人跟掌握超级计算机的人本性上不至于有太大不同---虽然都贪婪，但是现在并不比以往更贪婪。要是怪人贪婪，那为解决问题就只有号召灭人欲了，而这似乎不现实。所以...还是怪技术咯？唉，想起《让子弹飞》来了！糊涂，糊涂，怎么忘了马克思他老人家的教诲：事物都有两面嘛，正反两面的矛盾斗争迸出发展的动力，推动着我们跟世界一起向前滚。既然要“斗争”，前提是至少要看到事物还有另一面啊。就拿信息来说，每当传播手段有飞跃进展，开始改变人们的生活方式的时候，总有人出来讴歌时代，也总有出来大声疾呼；虽然呼了半天，也没见天塌下来，但是谁能说他们的呼喊没有参与塑造了我们的现在呢？   
+如前所说，技术的进步在个人和集体间的体现是不对等的；信息技术进步越大，这不对等也越加剧；技术是刀，小民是鱼，握着刀的是谁？握着刀的当然也是人，和小民差别本来不大的人；但刀越快，这差别就越明显。好吧，拐弯抹角地，原来是要把锅“扔”给技术啊！从工业革命到直到现在，技术发展一直是人类社会发展的动力，人不知道从技术进步里得了多少好处：抵御自然灾害和自身疾病的能力加强了，生活更稳定了，人口增多了，人均寿命增长了...我们占了技术大便宜，现在反过来怪技术，多少有点“吃饭砸锅”的意思呐。那怪握刀的人？这似乎也有点问题，因为人本来就是逐利的，几百年的人类进化在这一点上似乎还未改变太多东西；手里拿着算盘的人跟掌握超级计算机的人本性上不至于有太大不同---虽然都贪婪，但是现在并不比以往更贪婪。要是怪人贪婪，那为解决问题就只有号召灭人欲了，而这似乎不现实。所以...还是怪技术咯？唉，想起《让子弹飞》来了！糊涂，糊涂，怎么忘了马克思他老人家的教诲：事情都有两面嘛，在世事正反两面的矛盾斗争中，涌出的是发展的动力，推动着我们跟世界一起向前滚。既然要“斗争”，前提是至少要看到事物有这一面和那一面啊。咱把两面都翻出来看看，不提怪谁不怪谁，以免显得狭隘。就拿信息来说，每当传播手段有飞跃进展，开始改变人们的生活方式的时候，总有人出来讴歌时代，也总有出来大声疾呼；虽然呼了半天，也没见天塌下来，但是谁能说他们的呼喊没有参与塑造了我们的现在呢？   
 
 当然，如“人与信息时代”这样的大话题并不是我等小民该考虑的；何况想也想不出个所以然，除了一番折腾后又觉肚饿。但世界上的很多事就是这样，明明跟自己八竿子打不着，但碰巧了也会想想。这“想想”并没有什么用，只是在脑子里把这熟悉的世界又看了一遍。在脑子里看世界，看的心情取决于看的距离：隔得近了，看见蚂蚁被踩也替它疼；隔得远了，哪怕洪水滔天也不管---主要是想管也管不了。我是个乐观的人，虽然有时看东西不小心凑太近也会稍稍蹙下眉，但往往转头就抛脑后了；我知道这蹙的一下并不是因为事情有多不好，只因凑得太近而已。
 
