--- a/content/cn/2019-12-16-training.md
+++ b/content/cn/2019-12-16-training.md
@@ -8,15 +8,15 @@ tags: []
 ---
 在大学的时看过一个新闻，让我至今记忆犹新。新闻说，某地某超市搞活动，菜籽油半价，超市门外排起长队，有时需三小时以上才能买到油；新闻里还说排队买菜籽油的主要是老年人。我当时想，一桶菜籽油估计值三十块，半价的话，可能会省一二十块钱；虽然老年人时间比较充裕，但是如果有人花十五块钱请他们在某地站三小时，他们未必愿意；但是换成这么个形式，大家就趋之若鹜排队去，沾沾自喜购油回；踊跃得出乎意外。我理解这减半的价钱对一些贫困的家庭来说确如旱时微雨，虽少也值得争取；我也理解有些老人从苦日子过来，对他们来说省钱是一种习惯，而无关实际价值。所以，虽然用了“趋之若鹜”和“沾沾自喜”两个略带贬义的词来形容他们的排队购物，但是我对此并无评判之心，只是想来大概是这个样子，并非取其贬义，用春秋笔法要藏点微言大义在里头。   
 
-对老人的过分节省，我虽然不完全理解，但尊重；我听过太多“当年的”故事，生活在他们身上烙出的痕迹太深，擦不掉。但（不理性的）节省不只见于老人。有个好朋友曾跟我诉苦：她很纠结，不知道自己出了什么问题。这痛苦的起因是买水果。她大学附近有两家水果店，离学校大门远的那家店每斤水果要比离校门近那家便宜几毛钱，于是她每次就多走十分钟左右的路去远的那家买。这在平时没什么问题，只是后来朋友要准备考研了，时间紧，压力大，但是她还是会多走十来分钟路去买便宜点的水果。理智地想想，她觉得花十来分钟时间换来几毛钱的便宜不值，但是去校门口那家店买吧，又觉得有点不甘心。她觉得自己很奇怪，会为了这么点点事儿纠结。我了解这位朋友，她家庭条件其实很宽裕，虽然过日子一向比较精细，但不是锱铢必较的人。我想她这痛苦并不全来源于钱，而是理智跟习惯起了冲突；这冲突又被考研的压力放大了。我跟她说，觉得在哪儿买安心就去哪儿买，不必算时间的帐；不时走个十来分钟就当是遛弯了，比被困在教室和校门间两点一线强。       
+对老人的过分节省，我虽然不完全理解，但尊重；我听过很多“当年的”故事，生活在他们身上烙出的痕迹太深，擦不掉。但（不理性的）节省不只见于老人。有个好朋友曾跟我诉苦：她很痛苦，这痛苦的起因是买水果。她大学附近有两家水果店，离学校大门远的那家店每斤水果要比离校门近那家便宜几毛钱，于是她每次就多走十分钟左右的路去远的那家买。这在平时没什么问题，只是后来朋友要准备考研了，时间紧，压力大，但是她还是会多走十来分钟路去买便宜点的水果。理智地想想，她觉得花十来分钟时间换来几毛钱的便宜不值，但是去校门口那家店买吧，又觉得有点不甘心。她觉得自己很奇怪，会为了这么点点事儿纠结。我了解这位朋友，她的家庭条件其实比较宽裕，虽然过日子一向比较精细，但不是锱铢必较的人。我想她这痛苦并不全来源于钱，而是理智跟习惯起了冲突；这冲突又被考研的压力放大了。我跟她说，觉得在哪儿买安心就去哪儿买，不必算时间的帐；不时走个十来分钟就当是遛弯了，比被困在教室和校门间两点一线强。       
 
-我的微信上有五个群，“五”是我觉得我能应付的群的最大数目了。《生活大爆炸》里有一集讲，谢耳朵若交个新朋友，就得去掉一个老朋友，以此保持朋友数不超过某个数目；我对微信群就是这感觉。其实，我觉得舒适的微信群数目是“三”，所以曾退掉了两个相对可舍弃的群，但后来被朋友给硬绑了回去。反复退群显得太矫情，我也不想解释太多，于是“三”又变成了“五”。在群里，有时会有人发砍价链接，具体是什么我不大明白，大概知道是点开这东西的人越多，发的人买东西能便宜的钱也就越多；详细一问得知，其实就算点的人很多，能便宜的也就几块钱，有时甚至几毛钱而已。朋友告诉我，砍价链接在微信群里很常见，很多（青年人）人乐此不疲，这东西跟病毒一样在微信里蔓延。费这么大劲儿省这么点钱！这让我想起了半价的菜籽油和便宜而远的水果；不同的是，买菜籽油的老人是自己花时间排队，买水果的朋友是自己花时间走路，但发砍价链接的人花的却是别人的时间。麻烦别人一般是件不大好意思开口的事，更何况麻烦的人里头有很多是陌生人；且获益也不大。为什么这样的东西会像“病毒一样蔓延？”我想，这或许是由于砍价链接看似游戏的包装吧。一旦变成了“游戏”，很多人就不觉得不好意思了，玩游戏嘛；卸下了心理负担，自己也更容易沉迷于获得游戏奖励的快乐了；能便宜多少钱倒在其次。随着砍价链接的扩散，相伴而来的是厂商巨大的广告收益（和很多不胜其扰的人）。洪七公在地上埋只鸡，引来馋嘴的蜈蚣，大蜈蚣们吃着鸡，不知道七公那边火都生好了。这收益来得如此廉价，不得不说是厂商营销的成功。为什么他们能如此成功？我想这是因为人容易被训练，砍价链接的狂欢就是一次次的训练和被练。一点包装和一点奖励就让如此多的人心甘情愿地当了宣传手，做了平时自己不会（或是不好意思）做的事情，并乐在其中。一脑子多巴胺的人和一嘴哈喇子的狗之间的距离其实并不远（更何况还有贪婪在里头若隐若现）。       
+我的微信上有五个群，“五”是我觉得我能应付的群的最大数目了。《生活大爆炸》里有一集讲，谢耳朵若交个新朋友，就得去掉一个老朋友，以此保持朋友数不超过某个数目；我对微信群就是这感觉。其实，我觉得舒适的微信群数目是“三”，所以曾退掉了两个相对可舍弃的群，但后来被朋友给硬绑了回去。反复退群显得太矫情，我也不想解释太多，于是“三”又变成了“五”。在群里，有时会有人发砍价链接，具体是什么我不大明白，大概知道是点开这东西的人越多，发的人买东西也就越便宜。详细一问得知，其实就算点的人很多，能便宜的也就几块钱，有时甚至几毛钱而已。朋友告诉我，砍价链接在微信群里很常见，很多（青年人）人乐此不疲，这东西跟病毒一样在微信里蔓延。费这么大劲儿省这么点钱！这让我想起了半价的菜籽油和便宜而远的水果。不同的是，买菜籽油的老人是自己花时间排队，买水果的朋友是自己花时间走路，但发砍价链接的人花的却是别人的时间。麻烦别人一般是件不大好意思开口的事，更何况麻烦的人里头有很多是陌生人，且获益也不大。为什么这样的东西会像“病毒一样蔓延？”我想，这或许是由于砍价链接看似游戏的包装吧。一旦变成了“游戏”，很多人就不觉得不好意思了，玩游戏嘛；卸下了心理负担，自己也更容易沉迷于获得游戏奖励的快乐了，能便宜多少钱倒在其次。随着砍价链接的扩散，相伴而来的是厂商巨大的广告收益（和很多不胜其扰的人）。这收益来得如此廉价，不得不说是厂商营销的成功。为什么他们能如此成功？我想这是因为人容易被训练，砍价链接的狂欢就是一次次的训练和被练。一点包装和一点奖励就让如此多的人心甘情愿地当了宣传手，做了平时自己不会或是不好意思做的事情，并乐在其中。一脑子多巴胺的人和一嘴哈喇子的狗之间的距离其实并不远，更何况还有贪婪在里头若隐若现。       
 
-对人的训练，古已有之，于今为烈；信息技术的发展在此中扮演的角色尤为抢眼。信息通畅是社会的进步，这是一件大好事；但是信息技术的进步在个人和在集体层面并不是平等体现。相比于个人，集体，如国家，大公司，更能挖掘信息技术的潜力，并利用其谋取利益；这些利益包括但不限于政治和经济；使用的手法包括但不限于思想植入和行为控制。人不是有自由意志吗？那么容易被操纵？是的，就是这么容易。或许很多人都觉得自己是特别的，有自己的判断，但是说到底人的脑子就是个函数，这个函数的参数虽因人而异，但毕竟大家都是人，差异不会太大；以群体为单位看，这参数值可被较精确地估计；由此，在群体层面，给定输入值，输出值（群体反应）基本可预测；而控制输入在政府和一些大公司那里不难且常见。以新闻为例，在我大火墙内有信息控制，但墙外不是新闻自由吗？根据我观察，答案是令人遗憾的“不是”。每个国家都有自己的利益，这利益往往被编码成信息，传递给国民，完成一次从集体利益到个人爱憎的翻译---谁是朋友，谁是敌人。就说我比较了解的日本，这里虽然没有大火墙隔离信息和广电总局的坚强领导，但是对比英文，中文和日文的新闻，能明显看出传媒（电视，网络和报纸）对某些新闻有过滤和筛选。在一个没有我大火墙和也没有我大广电总局，且新闻“自由”的国度，媒体如何完成如此整齐划一的动作，这是一件我百思不得其解的事。此类“整齐划一”在欧美的英文媒体也不时能看见，并不为某国所特有。当然，我兔的信息掌控能力与多数老外相比是更富有层次和内涵的，在力度和广度上都达到了它们难望项背的高度；老外的类似行为虽有效颦之意，但只如萤火，难掩我兔久耕此道的明辉。大公司，特别是大型网络公司（不管是墙内还是墙外），也有自己的利益和生意（通过帮助别人获得利益而实现的自身利益）；这些公司利用信息套利和变现的能力也在随着信息技术的发展登峰造极：它们吆喝着看不见的“拐”，让人不自觉地就瘸了。       
+对人的训练，古已有之，于今为烈，信息技术的发展在此中扮演的角色尤为抢眼。信息通畅是社会的进步，这是一件大好事，但是信息技术的进步在个人和在集体层面并不是平等体现。相比于个人，集体，如国家，大公司，更能挖掘信息技术的潜力，并利用其谋取利益。这些利益包括但不限于政治和经济；使用的手法包括但不限于思想植入和行为控制。人不是有自由意志吗？那么容易被操纵？是的，就是这么容易。或许很多人都觉得自己是特别的，有自己的判断，但是说到底人的脑子就是个函数，这个函数的参数虽因人而异，但毕竟大家都是人，差异不会太大；以群体为单位看，这参数值可被较精确地估计。由此，在群体层面，给定输入值，输出值（群体反应）基本可预测，而控制输入在政府和一些大公司那里不难且常见。以新闻为例，在我大火墙内有信息控制，但墙外不是新闻自由吗？根据我观察，答案是令人遗憾的“不是”。每个国家都有自己的利益，这利益往往被编码成信息，传递给国民，完成一次从集体利益到个人爱憎的翻译---谁是朋友，谁是敌人。就说我比较了解的日本，这里虽然没有大火墙隔离信息和广电总局的坚强领导，但是对比英文，中文和日文的新闻，能明显看出传媒（电视，网络和报纸）对某些新闻有过滤和筛选。在一个没有我大火墙和也没有我大广电总局，且新闻“自由”的国度，媒体如何完成如此整齐划一的动作，我百思不得其解。此类“整齐划一”在欧美的英文媒体也不时能看见，并不为某国所特有。当然，我兔的信息掌控能力与多数老外相比是更富有层次和内涵的，在力度和广度上都达到了它们难望项背的高度。老外的类似行为虽有效颦之意，但只如萤火，难掩我兔久耕此道的明辉。大公司，特别是大型网络公司，不管是墙内还是墙外，也有自己的利益和生意（通过帮助别人获得利益而实现的自身利益）。这些公司利用信息套利和变现的能力也在随着信息技术的发展登峰造极：它们吆喝着看不见的“拐”，让人不自觉地就瘸了。       
 
-前面提到人是容易被训练的，这样的说法让我有自外于“人”的嫌疑，是暗示我能抗住不被影响？其实我压根没有这个意思。我也是人，也容易被训练；以往的训练，不管是来自家长，老师，朋友，甚至是短暂接触的人，都在我身上留下了痕迹。我知道自己是不够坚强的，要是猛然暴露于某种会让我多巴胺分泌的环境，我多半也是流着一嘴哈喇子，听着铃铛响。容易被训练并不是人的缺点：训练---如果得当---是可以让人进步的；而且，有时做事还真需要一股非理性的劲儿。但如何“得当”呢？这是个问题。集体，不论是政府还是公司，有集体的利益。当它需要小民骂它的对手的时候，它不一定会顾忌发布片面的负面信息对个人形成判断是否“得当”；当它需要小民帮它传播广告的时候，它不一定能顾忌病毒似的信息传递对与人交往是否“得当”。好在我们似乎不必过于担心这些信息会对人造成太大的影响。信息如潮水般不断涌入人们的大脑，这一茬刚刷了遍脑子，还没回过味儿，下一茬又来了；人在信息的海洋里多数时间是在做布朗运动，被根号 N 约束着，跑偏也跑不了多远。   
+前面提到人是容易被训练的，这样的说法让我有自外于“人”的嫌疑，是暗示我能不被影响？其实我压根没有这个意思。我也是人，也容易被训练。以往的训练，不管是来自家长，老师，朋友，甚至是短暂接触的人，都在我身上留下了痕迹。由此，我知道自己是不够坚强的，要是猛然暴露于某种会让我多巴胺分泌的环境，我多半也是流着一嘴哈喇子，听着铃铛响。容易被训练并不是人的缺点：训练---如果得当---是可以让人进步的；而且，有时做事还真需要一股非理性的劲儿。但如何“得当”呢？这是个问题。集体，不论是政府还是公司，有集体的利益，当它们的利益和“得当”间有了冲突的时候，它们是否还能顾忌“得当”？当集体需要小民骂它的对手的时候，它不一定能顾忌发布对手片面，甚至扭曲的信息对小民形成判断是否“得当”；当它需要小民帮它传播广告的时候，它不一定能顾忌病毒似的信息传递对与人交往是否“得当”。好在我们似乎不必过于担心这些信息会对人造成太大的影响。信息如潮水般不断涌入人们的大脑，这一茬刚刷了遍脑子，还没回过味儿，下一茬又来了；人在信息的海洋里多数时间是在做布朗运动，被根号 N 约束着，跑偏也跑不了多远。   
 
-如前所说，技术的进步在个人和集体间的体现是不对等的；信息技术进步越大，这不对等也越加剧；技术是刀，小民是鱼，握着刀的是谁？握着刀的是集体，当然也由人组成。这些人和小民差别本来不大；但刀越快，二者差别就越明显。好吧，拐弯抹角地，原来是要把锅“扔”给技术啊！从工业革命到直到现在，技术发展一直是人类社会发展的动力，人不知道从技术进步里得了多少好处：抵御自然灾害和自身疾病的能力加强了，生活更稳定了，人口增多了，人均寿命增长了...我们占了技术大便宜，现在反过来怪技术，多少有点“吃饭砸锅”的意思呐。那怪握刀的人？这似乎也有点问题，因为人本来就是逐利的，几百年的人类进化在这一点上似乎还未改变太多东西；手里拿着算盘的人跟掌握超级计算机的人本性上不至于有太大不同---虽然都贪婪，但是现在并不见得比以往更贪婪。要是怪人贪婪，那为解决问题，就只有号召灭人欲了，而这似乎不现实。所以...还是怪技术咯？想起《让子弹飞》来了！唉，糊涂，糊涂，怎么忘了马克思他老人家的教诲：事情都有两面嘛，在世事正反两面的矛盾斗争中，不断涌出发展的动力，推动着我们跟世界一起向前滚。既然要“斗争”，前提是至少要看到事物有这一面和那一面啊。咱把两面都翻出来看看，不提怪谁不怪谁，以免显得狭隘。就拿信息来说，每当传播手段有飞跃进展，开始改变人们的生活方式的时候，总有人出来讴歌时代，也总有出来大声疾呼；虽然呼了半天，也没见天塌下来，但是谁能说他们当初的呼喊没有参与塑造了我们的现在呢？   
+如前所说，技术的进步在个人和集体间的体现是不对等的；信息技术进步越大，这不对等也越加剧；技术是刀，小民是鱼，握着刀的是谁？握着刀的是集体，当然也由人组成。这些人和小民差别本来不大；但刀越快，二者差别就越明显。额...拐弯抹角地，原来是要把锅“扔”给技术啊！从工业革命到直到现在，技术发展一直是人类社会发展的动力，人不知道从技术进步里得了多少好处：抵御自然灾害和自身疾病的能力加强了，生活更稳定了，人口增多了，人均寿命增长了...我们占了技术大便宜，现在反过来怪技术，多少有点“吃饭砸锅”的意思呐。那怪握刀的人？这似乎也有点问题，因为人本来就是逐利的，几百年的人类进化在这一点上似乎还未改变太多东西：手里拿着算盘的人跟掌握超级计算机的人本性上不至于有太大不同---虽然都贪婪，但是现在并不见得比以往更贪婪。要是怪人贪婪，那为解决问题，就只有号召灭人欲了，而这似乎不现实。所以...还是怪技术咯？想起《让子弹飞》来了。唉，糊涂，糊涂，怎么忘了马克思他老人家的教诲：事情都有两面嘛，且时时刻刻在斗争。在这两面的矛盾斗争中不断涌出的发展动力推动着我们跟世界一起向前滚。既然要“斗争”，前提是至少要看到事物有这一面和那一面啊。咱把两面都翻出来看看，不提怪谁不怪谁，以免显得狭隘。就拿信息来说，每当传播手段有飞跃进展，开始改变人们的生活方式的时候，总有人兴高采烈讴歌时代，也总有人忧心忡忡大声疾呼；虽然呼了半天，也没见天塌下来，但是谁能说他们当初的担心没有参与塑造了我们的现在呢？   
 
 当然，像“人与信息时代”这样的大话题并不是我等小民能考虑的；就算想也想不出个所以然，除了一番折腾后又觉肚饿。但世界上的很多事就是这样，明明跟自己八竿子打不着，但碰巧了也会想想。这“想想”没有什么用，只是在脑子里把这熟悉的世界又看了一遍。在脑子里看世界，看的心情取决于看的距离：隔得近了，看见蚂蚁被踩也替它疼；隔得远了，哪怕洪水滔天也不管---主要是想管也管不了。我是个乐观的人，虽然有时看东西不小心凑太近也会稍稍蹙下眉，但往往转头就抛脑后了---我知道这蹙的一下并不是因为事情有多不好，只是因为凑得太近而已。
 
