--- a/content/cn/2019-10-12-typhoon.md
+++ b/content/cn/2019-10-12-typhoon.md
@@ -8,9 +8,9 @@ tags: []
 ---
 今天台风过境。被风吹斜的雨撞击着玻璃窗，发出时密时疏的声响；玻璃上挂满了水滴，有的已成流滑下；屋外，草木在风雨中飘摇。  
 
-坐在桌前，我看着水杯上缓缓上升的热气，感到一种莫名的惊异：这缥缈的热气如此脆弱，似乎我呼吸稍重，它就会被绕乱成各种形状；但近在咫尺的疾风骤雨却不能对它产生丝毫影响。我想，我只要打开门走出去几步就会被风吹得无法立住，而且会瞬间被淋成落汤鸡，然而现在我却在闲适地看着水杯上的热气发呆。自然，我知道是周围我平时不怎么注意的几面墙和门窗挡住了风雨，让我此刻有此安稳---我已不知如此安稳地在屋子里度过了多少日子，不过只在此风雨之时，这安稳才显得如此真切，舒适。   
+坐在桌前，我看着水杯上缓缓上升的热气，感到一种莫名的惊异：这缥缈的热气如此脆弱，似乎我呼吸稍重，它就会被绕乱成各种形状；但近在咫尺的疾风骤雨却不能对它产生丝毫影响。我想，我只要打开门走出去几步就会被风吹得无法立住，而且会瞬间被淋成落汤鸡，然而现在我却在闲适地看着水杯上的热气发呆。自然，我知道是周围我平时不怎么注意的几面墙和门窗挡住了风雨，让我此刻有此安稳---我已不知如此安稳地在屋子里度过了多少日子，不过只在此风雨之时，这才显得如此真切，舒适。   
 
-葛饰北斋喜描绘透过疾风狂浪看着岿然不动的富士山的场景，而此刻我却在透过水杯上稳稳上飘的热气看着屋外的风雨。这样的反差真有意思；这“意思”或许能画在纸上，却难用语言表达。真如陶县令所说，“此中有真意，欲辨已忘言。”在这真切的闲静里，我胡思乱想着---似乎身体虽然安适，思绪在却随着屋外的风雨飘摇。    
+葛饰北斋喜描绘透过疾风狂浪看着岿然不动的富士山的场景，而此刻我却在透过水杯上稳稳上飘的热气看着屋外的风雨。这样的反差很有意思，这“意思”或许能画在纸上，却难用语言表达。或如陶县令所说，“此中有真意，欲辨已忘言。”在这真切的闲静里，我胡思乱想着---似乎身体虽然安适，思绪在却随着屋外的风雨飘摇。    
 
 我想起了几首小诗。
 
@@ -49,7 +49,7 @@ Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗
 
 这几天正好在颁发诺贝尔奖，看了得奖预测的朋友告诉我说今年的化学奖有可能发给基因编辑技术，不过实际上是发给了锂电池的发明者。预测基因编辑技术会得奖其实是个没有太大意义的事情，因为几乎可以确定该技术会拿诺奖，问题是哪年，以及给谁。其中，“给谁”是个大问题，参与基因编辑技术发展且有较大贡献的人比较多；而且其中最常用的 CRISPR 技术的发明者间还在闹专利纠纷。如何把握平衡需要评委们费点脑筋。如果“给谁”的问题解决了，“哪年”就不是问题了，肯定会很快。   
 
-每年诺奖颁奖都会受到很多人的关注，我想，这反应了人们对科学和技术在社会发展中的正面作用的认可。人们在社会建设中应用科技发展获得的成果，并取得了巨大的成功；这成功增进了人们对科技，以及对人自己的信心；这信心反馈在人自身，激励了人们进一步发展科技的劲头。这样的情形在很大程度上改变了人们对科技本身的认识：本来，科技是认识世界的方法之一，现在在很多人眼中，科技却似乎正在成为认识世界唯一的方法。对科技这样的认识和信心正在让我们轻率地踏入一些我们本应该心怀敬畏的地方。         
+每年诺奖颁奖都会受到很多人的关注，我想，这反应了人们对科学和技术在社会发展中所起的积极作用的认可。人们在社会建设中应用科技发展获得的成果，并取得了巨大的成功；这成功增进了人们对科技，以及对人自己的信心；这信心反馈在人自身，激励了人们进一步发展科技的劲头。这样的情形在很大程度上改变了人们对科技本身的认识：本来，科技是认识世界的方法之一，现在在很多人眼中，科技却似乎正在成为认识世界唯一的方法。对科技这样的认识和信心正在让我们轻率地踏入一些我们本应该心怀敬畏的地方。         
 
 维特根斯坦说：  
 
