--- a/content/en/2020-02-27-a-demo-for-citation-in-blogdown.Rmd
+++ b/content/en/2020-02-27-a-demo-for-citation-in-blogdown.Rmd
@@ -20,6 +20,7 @@ lapply(packages, function(x) {
 })
 ```
 
+This demo is a reproduction of <https://blogdown-demo.rbind.io/2017/08/28/adding-citations-to-posts/>.  
 
 With **blogdown**, you are able to take advantage of several features of Pandoc's Markdown, including adding citations. You can read more about adding citations in the **bookdown** book [here](https://bookdown.org/yihui/bookdown/citations.html). 
 
