--- a/content/cn/2020-03-18-k.md
+++ b/content/cn/2020-03-18-k.md
@@ -12,11 +12,11 @@ K さん的座位在我的右后方。她以往每天总是第一个到实验室
 
 上周四，教授突然说要开一个实验室会议。我们的例会周一刚开过，难道有什么紧急事情要宣布吗？我走进休息室，大家已经坐好，这次临时会议是教授要向大家说明 K さん的情况。我听着教授的通报，惊呆了。我不敢相信自己的耳朵，一边听，一边目不转睛地看着教授，放佛在用眼睛确认听到的一切确实是教授说的话。耳朵听到的每个字都在脑子里反复核对，确保我不是听错了。休息室里，实验室成员们越来越安静，最后只剩下教授的声音不断震动着我的耳膜，越来越沉重。开完会我站起来，突然感到胸口一阵痛，一种物理的，真实的撕痛。我觉得心里似有重物压着，这重量无法用手或用心推开。做实验和休息的时候，我脑子里开始闪现一些片段，那是这些年我和 K さん之间的。    
 
-刚加入实验室，初见 K さん，出现在我眼前的是一位身材娇小而匀称的短发女性，说英语很流利，但话尾略有些抑扬顿挫。在我刚加入实验室的那段时间里，K さん常问我生活上有没有遇到什么困难，她担心我由于语言不通遇到问题无法自己处理，担心我不好意思开口像大家求助。她反复确认，希望确保我在这里的生活一切都好。在实验上，我最初接触的实验有很多是 K さん教的。当时我需要在显微镜下分离切割苔藓植物的叶片，苔藓的叶子特别小，和它相比，我的手和手中的镊子都太大了，镊子尖在显微镜下明显地发抖。K さん给我讲解操作要领的时候细致入微，在看我操作的时候也不厌其烦地给我纠正出现的问题。我不大擅长动手，学这类操作比较慢，但 K さん从不着急，看着我进展缓慢反过来安慰我，跟我说刚开始上手慢是正常的，多点时间练习就好了，不要着急。和 K さん聊天是轻松的，她总是饶有兴致地听我讲一些我小时候的事情，也会饶有兴致地给我讲一些她自己的事情。虽然她年纪比我长不少，但我总觉得她像是一位朋友而不是一位长辈。我记得有一次在聚会上，我们聊自己吃过的比较有意思的食物。她说她吃过一种小鱼，那鱼很小，被装在一个水杯里，活的，在杯子里游来游去；吃的时候端起杯子一饮而尽，感受小鱼经过喉咙时那扑腾的感觉。K さん讲述完后看到我惊讶的表情很得意，笑得像个刚完成大挑战的孩子。K さん知道我喜欢吃辣，于是就留心日本能找到的辛辣食品。有一次她突然给我一个袋子，里头大概有十来种辣的泡面，说是她收集的，让我尝尝。我虽然不时能在日本便利店和超市里看到辣泡面，但种类比较单一。我不知道 K さん在哪里找到这么多的种类，但知道她一定费心不少。有时她会给我带火锅底料，带辣椒粉。有的来自她在家附近超市，也有的来自她外出旅游时遇到的某个小店。看着 K さん空空的座位，我脑子里浮现出她在各个小店里帮我寻辣的样子，当初收到美味的开心和感激都化为现时的痛，在心口颤抖。K さん虽然总是像朋友一样待我，但也有时候会像个长辈。我吃饭很快，K さん看我狼吞虎咽时，就会认真地告诉我：“Liechi, 这样吃对身体不好，你得多咀嚼才有利于肠胃吸收。”告诉我一口饭要咀嚼二十次再咽下。我尝试了一下，嚼了十来下就觉得累，于是慢了两口，就又快起来了。有一次我不知在休息室做什么，K さん进休息室时发现我搞得有点乱糟糟，就笑着“数落”我，说我应该怎么怎么弄。那语气就像是我妈看到我起床没有叠被子时说我的那种，让我觉得很亲切。K さん说完我，可能自己都觉得语气有点异样，有点不好意思的笑着问：“我说话是不是像你妈妈一样？”然后我们都笑了起来。K さん虽然是个身型娇小的女性，但却很“强悍”，不管实验室有什么事情，她都跑在前头。实验室的日常运行，从对外跟人接洽到维护仪器，电器，她都担负了大部分工作。比如实验室天花板上的电杠坏了，她二话不说就抬着高架凳去换。一次，我看着她端着高架凳过来，就抢着去换，因为我觉得我是个男子汉，不能安坐着看她爬上爬下的。但实际上我有点恐高，就是高架凳这种一米多高的东西，我站上去都会觉得眼睛发眩，感到整个身子都在发抖；站不了一分钟，头上的汗珠就一颗颗往下滴。K さん在下边看着比我还着急，担心地问：“没问题吧？”让我下来，她换。我却逞强，坚持要自己换。由于紧张，老是换不成功，于是K さん就干巴巴仰头看着等。等我终于换好了，她就在下边开心地拍手，跟我完成了一个大工程一样。其实如果她自己换的话，早就弄完了，根本不用耽搁这么长时间。我有点不好意思，跟她约定以后电杠坏了都由我来换，当是锻炼。K さん身体一直很好，她每个周都去健身房锻炼，力气也比较大。有一回，我拧一个瓶盖，拧了半天都拧不开。K さん过来伸手就把瓶子接过去要帮我拧。我正跟她说，这个盖子很紧，别勉强。没想到 K さん一使劲儿，盖子开了。看着我尴尬地站在面前，K さん赶紧安慰我，说其实我已经快把盖子拧松了，所以她才能拧开的。于是我觉得更不好意思了。在这样小事上，K さん都让我有一种被保护了的感觉，而这样的的“小事”在这些年的工作和生活中很多，很多。      
+刚加入实验室，初见 K さん，出现在我眼前的是一位身材娇小而匀称的短发女性，说英语很流利，但话尾略有些抑扬顿挫。在我刚加入实验室的那段时间里，K さん常问我生活上有没有遇到什么困难，她担心我由于语言不通遇到问题无法自己处理，担心我不好意思开口向大家求助。她反复确认，希望我在这里的生活一切都好。在实验上，我最初接触的实验有很多是 K さん教的。当时我需要在显微镜下分离切割苔藓植物的叶片，苔藓的叶子特别小，和它相比，我的手和手中的镊子都太大了，镊子尖在显微镜下明显地发抖。K さん给我讲解操作要领的时候细致入微，在看我操作的时候也不厌其烦地给我纠正出现的问题。我不大擅长动手，学这类操作比较慢，但 K さん从不着急，看着我进展缓慢反过来安慰我，跟我说刚开始上手慢是正常的，多点时间练习就好了，不要着急。和 K さん聊天是轻松的，她总是饶有兴致地听我讲一些我小时候的事情，也会饶有兴致地给我讲一些她自己的事情。虽然她年纪比我长不少，但我总觉得她像是一位朋友而不是一位长辈。我记得有一次在聚会上，我们聊自己吃过的比较有意思的食物。她说她吃过一种小鱼，那鱼很小，被装在一个水杯里，活的，在杯子里游来游去；吃的时候端起杯子一饮而尽，感受小鱼经过喉咙时那扑腾的感觉。K さん讲述完后看到我惊讶的表情很得意，笑得像个刚完成大挑战的孩子。K さん知道我喜欢吃辣，于是就留心日本能找到的辛辣食品。有一次她突然给我一个袋子，里头大概有十来种辣的泡面，说是她收集的，让我尝尝。我虽然不时能在日本便利店和超市里看到辣泡面，但种类比较单一。我不知道 K さん在哪里找到这么多的种类，但知道她一定费心不少。有时她会给我带火锅底料，带辣椒粉。有的来自她在家附近超市，也有的来自她外出旅游时遇到的某个小店。看着 K さん空空的座位，我脑子里浮现出她在各个小店里帮我寻辣的样子，当初收到美味的开心和感激都化为现时的痛，在心口颤抖。K さん虽然总是像朋友一样待我，但也有时候会像个长辈。我吃饭很快，K さん看我狼吞虎咽时，就会认真地告诉我：“Liechi, 这样吃对身体不好，你得多咀嚼才有利于肠胃吸收。”告诉我一口饭要咀嚼二十次再咽下。我尝试了一下，嚼了十来下就觉得累，于是慢了两口，就又快起来了。有一次我不知在休息室做什么，K さん进休息室时发现我搞得有点乱糟糟，就笑着“数落”我，说我应该怎么怎么弄。那语气就像是我妈看到我起床没有叠被子时说我的那种，让我觉得很亲切。K さん说完我，可能自己都觉得语气有点异样，有点不好意思的笑着问：“我说话是不是像你妈妈一样？”然后我们都笑了起来。K さん虽然是个身型娇小的女性，但却很“强悍”，不管实验室有什么事情，她都跑在前头。实验室的日常运行，从对外跟人接洽到维护仪器，电器，她都担负了大部分工作。比如实验室天花板上的电杠坏了，她二话不说就抬着高架凳去换。一次，我看着她端着高架凳过来，就抢着去换，因为我觉得我是个男子汉，不能安坐着看她爬上爬下的。但实际上我有点恐高，就是高架凳这种一米多高的东西，我站上去都会觉得眼睛发眩，感到整个身子都在发抖；站不了一分钟，头上的汗珠就一颗颗往下滴。K さん在下边看着比我还着急，担心地问：“没问题吧？”让我下来，她换。我却逞强，坚持要自己换。由于紧张，老是换不成功，于是K さん就干巴巴仰头看着等。等我终于换好了，她就在下边开心地拍手，跟我完成了一个大工程一样。其实如果她自己换的话，早就弄完了，根本不用耽搁这么长时间。我有点不好意思，跟她约定以后电杠坏了都由我来换，当是锻炼。K さん身体一直很好，她每个周都去健身房锻炼，力气也比较大。有一回，我拧一个瓶盖，拧了半天都拧不开。K さん过来伸手就把瓶子接过去要帮我拧。我正跟她说，这个盖子很紧，别勉强。没想到 K さん一使劲儿，盖子开了。看着我尴尬地站在面前，K さん赶紧安慰我，说其实我已经快把盖子拧松了，所以她才能拧开的。于是我觉得更不好意思了。在这样的小事上，K さん都让我有一种被保护了的感觉，而这样的的“小事”在这些年的工作和生活中很多，很多。      
 
-可能是因为常锻炼，生活习惯也很好，所以 K さん几乎没有生过病。她也几乎是全勤地工作，而且每天都主动比单位要求的时间更早地来上班，也比单位要求更晚地下班，工作近十二小时；她总是精力旺盛，我很少看到她露出疲态。工作时，K さん是那么地专注，她每天完成的事情，我想比普通人要多一倍吧。K さん在加入我们研究室之前在大隅良典教授研究室工作。在大隅研期间，K さん完成了几个和细胞自噬有关的重要工作。其中 [LC3, a mammalian homologue of yeast Apg8p, is localized in autophagosome membranes after processing](https://www.embopress.org/doi/full/10.1093/emboj/19.21.5720) 一文报道了基因 *LC3* 的形式II可作为量化细胞自噬程度的标记。这是整个细胞自噬领域的重要的突破，从 2000 年发表到现在的二十年间被引用了近 6000 次，是该领域引用率最高的研究性论文之一。我有时会查看 K さん的论文引用数，跟 K さん说论文已经被引 4000 次了，已经被引 5000次了，已经快6000次了。K さん总是得意而略惊讶地反问，哦，是吗？这么多了吗？然后开心地笑。我知道她会这样反应，这是我跟她之间的一个小游戏，一切都可预测，但一切都那么有意思。     
+可能是因为常锻炼，生活习惯也很好，所以 K さん几乎没有生过病。她也几乎是全勤地工作，每天都主动比单位要求的时间更早地来上班，也比单位要求更晚地下班，工作近十二小时；她总是精力旺盛，我很少看到她露出疲态。工作时，K さん是那么地专注，她每天完成的事情，我想比普通人要多一倍吧。K さん在加入我们研究室之前在大隅良典教授研究室工作。在大隅研期间，K さん完成了几个和细胞自噬有关的重要工作。其中 [LC3, a mammalian homologue of yeast Apg8p, is localized in autophagosome membranes after processing](https://www.embopress.org/doi/full/10.1093/emboj/19.21.5720) 一文报道了基因 *LC3* 的形式II可作为量化细胞自噬程度的标记。这是整个细胞自噬领域的重要突破，从 2000 年发表到现在的二十年间被引用了近 6000 次，是该领域引用率最高的研究性论文之一。我有时会查看 K さん的论文引用数，跟 K さん说论文已经被引 4000 次了，已经被引 5000次了，已经快6000次了。K さん总是得意而略惊讶地反问，哦，是吗？这么多了吗？然后开心地笑。我知道她会这样反应，这是我跟她之间的一个小游戏，一切都可预测，但一切都那么有意思。     
 
-然而，我没有想到这样善良，健康，坚强的 K さん会突然遭遇到这么大的劫难。为什么？为什么会是 K さん！我希望这消息是不确的，然而我知道这消息是确的。我知道 K さん的情况很不好，我无法假装问题不大，但我希望现在的医疗技术能帮助 K さん，帮助 善良，健康，坚强的 K さん回到自己的生活，回到实验室来。如果这困难大到现代医疗技术不足以处理，那我期待奇迹，如果有人值得奇迹出现，K さん就是这样的人。
+然而，我没有想到这样善良，健康，坚强的 K さん会突然遭遇到这么大的劫难。为什么？为什么会是 K さん！我希望这消息是不确的，然而我知道这消息是确的。我知道 K さん的情况很不好，我无法假装问题不大，但我希望现在的医疗技术能帮助 K さん，帮助善良，坚强的 K さん恢复健康，回到自己的生活，回到实验室来。如果这困难大到现代医疗技术不足以处理，那我期待奇迹，如果有人值得奇迹出现，K さん就是这样的人。
 
 
 
