Kabeya san has left.

--- a/content/cn/2020-03-18-k.md
+++ b/content/cn/2020-03-18-k.md
@@ -16,8 +16,10 @@ K さん的座位在我的右后方。她以往每天总是第一个到实验室
 
 可能是因为常锻炼，生活习惯也很好，所以 K さん几乎没有生过病。她也几乎是全勤地工作，每天都主动比单位要求的时间更早地来上班，也比单位要求更晚地下班，工作近十二小时；她总是精力旺盛，我很少看到她露出疲态。工作时，K さん是那么地专注，她每天完成的事情，我想比普通人要多一倍吧。K さん在加入我们研究室之前在大隅良典教授研究室工作。在大隅研期间，K さん完成了几个和细胞自噬有关的重要工作。其中 [LC3, a mammalian homologue of yeast Apg8p, is localized in autophagosome membranes after processing](https://www.embopress.org/doi/full/10.1093/emboj/19.21.5720) 一文报道了基因 *LC3* 的形式II可作为量化细胞自噬程度的标记。这是整个细胞自噬领域的重要突破，从 2000 年发表到现在的二十年间被引用了近 6000 次，是该领域引用率最高的研究性论文之一。我有时会查看 K さん的论文引用数，跟 K さん说论文已经被引 4000 次了，已经被引 5000次了，已经快6000次了。K さん总是得意而略惊讶地反问，哦，是吗？这么多了吗？然后开心地笑。我知道她会这样反应，这是我跟她之间的一个小游戏，一切都可预测，但一切都那么有意思。     
 
-然而，我没有想到这样善良，健康，坚强的 K さん会突然遭遇到这么大的劫难。为什么？为什么会是 K さん！我希望这消息是不确的，然而我知道这消息是确的。我知道 K さん的情况很不好，我无法假装问题不大，但我希望现在的医疗技术能帮助 K さん，帮助善良，坚强的 K さん恢复健康，回到自己的生活，回到实验室来。如果这困难大到现代医疗技术不足以处理，那我期待奇迹，如果有人值得奇迹出现，K さん就是这样的人。
+然而，我没有想到这样善良，健康，坚强的 K さん会突然遭遇到这么大的劫难。为什么？为什么会是 K さん！我希望这消息是不确的，然而我知道这消息是确的。我知道 K さん的情况很不好，我无法假装问题不大，但我希望现在的医疗技术能帮助 K さん，帮助善良，坚强的 K さん恢复健康，回到自己的生活，回到实验室来。如果这困难大到现代医疗技术不足以处理，那我期待奇迹，如果有人值得奇迹出现，K さん就是这样的人。    
 
+-----------------
+Kabeya さん于2020年3月22日下午6点26分离开了。
 
 
 
