--- a/content/cn/2020-04-27-thoughts.md
+++ b/content/cn/2020-04-27-thoughts.md
@@ -10,9 +10,9 @@ tags: []
 
 > 我是一个中国人，我不为此自豪，也不为此自卑，我只是凑巧是个中国人。我是一个朝鲜族，我不为此自豪，也不为此自卑，我只是凑巧是个朝鲜族...我是一个国际主义者...   
 
-群友说这话里的国际主义精神让他感动，比硬性灌输的狭隘的爱国主义要好很多。  
+群友说这话里的国际主义让他感动，比硬性灌输的狭隘的爱国主义要好很多。  
 
-不时会听到将"国际主义"和“爱国主义”对比的说法，前者是宽广的代表，而后者则是狭隘的代表。我觉得“爱国”本是一种朴素的感情，不必灌输，也不一定狭隘，但在一些一言难尽的操弄下，这个词蒙上了尘。我讨厌口号爱国，特别是当这样的口号是为迎合政治正确而喊的时候。我觉得“爱国主义精神”是个别扭的词，“爱国”到底是“主义”，是“精神”，还是“主义的精神”？（类似不通的搭配还有“三个代表”里的“先进文化”，文化贵在多样，谁比谁先进？现代诗比汉乐府先进？）但在我看来，“爱国”是一种自然的情感，其本质是个体对生于斯，长于斯的集体的归属感，没什么不妥。需要强调的是，我说这是种自然的情感，不是“正确的”情感，也不是“错误的”情感。我恰好生为中国人，理论上，我也有可能恰好生为欧洲人，美国人，日本人...生为中国人并不比生为任何一个他国公民更高贵。但我既已生为中国人，这就注定了我会首先通过了解自己身边的环境（中国）来了解世界；会借助汉语去了解各文化和文明；会首先了解自己周围的人，通过他们，我看到了自己。中国元素会伴随着我们的成长，这不是我们自己选的，但是一般来说，我们不可避免地会对这些元素更熟悉，觉得更亲近。中国元素里当然有很多不足之处，我们不需要全然认同，曲意维护；就好比我们的亲人，他们身上也不都是优点，也会做我们不认同的事情，但这不妨碍我们见到这些亲人时觉得熟悉，亲切。当然，有些人对母国的各方面都不认同，他心里或有个更倾心的国度，这也没有任何问题，人应该有选择权，包括选择自己理想中的归属。我所不认同的是一些人将“国际主义”挂嘴边，并将其与“爱国”对立的做法。     
+不时会听到将"国际主义"和“爱国主义”对比的说法，前者是宽广的代表，而后者则是狭隘的代表。我觉得“爱国”本是一种朴素的感情，不必灌输，也不一定狭隘，但在一些一言难尽的操弄下，这个词蒙上了尘。我讨厌口号爱国，特别是当这样的口号是为迎合政治正确而喊的时候。我觉得“爱国主义精神”是个别扭的词，“爱国”到底是“主义”，是“精神”，还是“主义的精神”？（类似不通的搭配还有“三个代表”里的“先进文化”，文化贵在多样，谁比谁先进？现代诗比汉乐府先进？）但在我看来，“爱国”是一种自然的情感，其本质是个体对生于斯，长于斯的集体的归属感，没什么不妥。需要强调的是，我说这是种自然的情感，不是“正确的”情感，也不是“错误的”情感。我恰好生为中国人，理论上，我也有可能恰好生为欧洲人，美国人，日本人...生为中国人并不比生为任何一个他国公民更高贵。但我既已生为中国人，这就注定了我会首先通过了解自己身边的环境（中国）来了解世界；会借助汉语去了解各文化和文明；会首先了解自己周围的人，通过他们，我看到了自己。中国元素会伴随着我们的成长，这不是我们自己选的，但是一般来说，我们不可避免地会对这些元素更熟悉，觉得更亲近。中国元素里当然有很多不足之处，我们不需要全然认同，曲意维护；就好比我们的亲人，他们身上也不都是优点，也会做我们不认同的事情，但这不妨碍我们见到这些亲人时觉得熟悉，亲切。当然，有些人对母国的各方面都看不上，更别说感到亲切了，他心里或有个更倾心的国度，这也没有任何问题，人应该有选择权，包括选择自己理想中的归属。我所不认同的是一些人将“国际主义”挂嘴边，并将其与“爱国”对立的做法。     
 
 我觉得“国际主义”和“爱国”是不冲突的。推己及人，老吾老以及人之老，幼吾幼以及人之幼；我们珍爱自己的故土，由此理解别人对自己故土的珍爱，由此尊重和爱护别人的家园。我想这是人对外部世界产生感情的正常模式；宣扬泛爱众的墨家是无法长久持存的，因为这不合乎人情。我特别喜欢邓小平的一句话：  
 
