--- a/content/cn/2020-05-04-.md
+++ b/content/cn/2020-05-04-.md
@@ -3,9 +3,9 @@ title: 从片到点
 author: 张列弛
 date: '2020-05-04'
 ---
-昨天晚上下了场雨，给渐热的天降了降温。今天早上醒来，还没睁眼就感受到了从窗外吹来的风，微冷，还带着雨水的味道。这么躺着真舒服，于是我想做点让自己更舒服的事情。拿出手机，打开微信，我开始清理最近越发觉得杂乱的联系人和群。一通操作，删了十多个不熟悉的人，删了两个群，剩下的都是自己的朋友和与自己关系密切的群。风更舒服了。   
+昨天晚上下了场雨，给渐热的天降了降温。今天早上醒来，还没睁眼就感受到了从窗外吹来的风，微冷，还带着雨水的味道。这么躺着真舒服，于是我想做点让自己更舒服的事情。拿出手机，打开微信，我开始清理最近越发感到杂乱的联系人和群。一通操作，删了十多个不熟悉的人，删了两个群，剩下的都是自己的朋友和与自己关系密切的群体。风更舒服了。   
 
-在整理微信的时候，看着联系人名单里一个个陌生的名字，看着群里相隔千里，彼此不大熟悉，但却相谈如旧识的人，不禁感叹科技的伟力。我小时候住农村，邻居是自家大舅公和幺舅公，三家人住在一个山沟里头；屋连着屋，地连着地，大家天天见面，互帮互助。走过一条弯弯曲曲的小路，就出了山沟来到一相对平坦的地面，那里住着几户人家，也是亲戚，虽然关系相对较远。再往外走就是我不太认识的别人家了，家里大人们知道那些人家姓什么，是做什么的，但来往相对较少。下地干活时若碰上了大家就打个招呼。再远的地方，可能就连大人们都不大清楚了，大抵只知道那边群聚而居的人家姓什么。总得说来，那时人们交往的圈子是以自己家为中心往四周扩散的，一般来说，离自己家越远，人与人之间就越不熟悉。用交通靠走，通讯靠吼来描述当时的生活是恰如其分的。小学时，我转学到了县城里，住在三姑家。在城里，大家住楼房，一栋栋地立着，方方正正，确实像火柴盒。和在农村不同，城里虽然楼房密集，人和人之间的距离看起来是近了，但出了自家门，邻居就是陌生人。不是一开始陌生，慢慢就熟悉那种，而是一直陌生；因为大家都不大有认识对方的意愿。以前听别人说城市化让人情变得冷淡，这也确实符合我的感受。为什么城市化让人情冷了？其实道理不复杂。在农村，大家都是聚族而居，互相之间有血缘的纽带连接；就算没有血缘关系，邻里之间也一住就是几十年，谈交情都论代。既然人生要交织在一起这么久，还是早点认识吧。相知，相帮，相爱，“远亲不如近邻”。城里人虽然住在一起，但彼此没有血缘纽带；由于人口流动性大，指不定哪天就换邻居了，既然迟早要相忘与江湖，那还不如一开始就放弃相濡以沫。我上中学时，在城里人们的社交关系一般限于同城的亲朋好友，交流主要靠电话和短信。而现在，由于网络的发达，人们住在哪里好像已经不大重要了。打开微信或者其他应用软件就能和全国各地的，认识不认识的人交流。偌大的城市里，实际生活中往往只有家庭成员间相依为命。除了家人和同事，举目尽是陌生人。在城市里，人被划成了以家庭为单位的孤岛；但人们不一定觉得孤单，因为在另一个世界，网络空间，这些孤岛又是一个一个的节点；打开社交软件，丰富，热闹的网络世界正车水马龙。我以前会说“虚拟的”网络空间，但现在已经很少这么说了，因为有时觉得网络世界似乎比现实还要真实。从农村里一片一片的人到网络上一个一个的点，科技改变了我们的生活。    
+在整理微信的时候，看着联系人名单里一个个陌生的名字，看着群里相隔千里，彼此不大熟悉，但却相谈如旧识的人，不禁感叹科技的伟力。我小时候住农村，邻居是自家大舅公和幺舅公，三家人住在一个山沟里头；屋连着屋，地连着地，大家天天见面，互帮互助。走过一条弯弯曲曲的小路，就出了山沟来到一相对平坦的地面，那里住着几户人家，也是亲戚，虽然关系相对较远。再往外走就是我不太认识的别人家了，家里大人们知道那些人家姓什么，是做什么的，但来往相对较少。下地干活时若碰上了大家就打个招呼。再远的地方，可能就连大人们都不大清楚了，大抵只知道那边群聚而居的人家姓什么。总得说来，那时人们交往的圈子是以自己家为中心往四周扩散的，一般来说，离自己家越远，人与人之间就越不熟悉。用交通靠走，通讯靠吼来描述当时的生活是恰如其分的。小学时，我转学到了县城里，住在三姑家。在城里，大家住楼房，一栋栋地立着，方方正正，确实像火柴盒。和在农村不同，城里虽然楼房密集，人和人之间的距离看起来是近了，但出了自家门，邻居就是陌生人。不是一开始陌生，慢慢就熟悉那种，而是一直陌生；因为大家都不大有认识对方的意愿。以前听别人说城市化让人情变得冷淡，这也确实符合我的感受。为什么城市化让人情冷了？其实道理不复杂。在农村，大家都是聚族而居，互相之间有血缘的纽带连接；就算没有血缘关系，邻里之间也一住就是几十年，谈交情都论代。既然人生要交织在一起这么久，还是早点认识吧。相知，相帮，相爱，“远亲不如近邻”。城里人虽然住在一起，但彼此没有血缘纽带；由于人口流动性大，指不定哪天就换邻居了，既然迟早要相忘与江湖，那还不如一开始就放弃相濡以沫。我上中学时，在城里人们的社交关系一般限于同城的亲朋好友，交流主要靠电话和短信。而现在，由于网络的发达，人们住在哪里好像已经不大重要了。打开微信或者其他应用软件就能和全国各地的，认识不认识的人交流。偌大的城市里，实际生活中往往只有家庭成员间相依为命。除了家人和同事，举目尽是陌生人。在城市里，人被划成了以家庭为单位的孤岛；但人们并不觉得孤单，因为这些孤岛同时又是网络空间一个一个的节点；打开社交软件，丰富，热闹的网络世界正车水马龙。我以前会说“虚拟的”网络空间，但现在已经很少这么说了，因为有时觉得网络世界似乎比现实还要真实。从农村里一片一片的人到网络上一个一个的点，科技改变了我们的生活。    
 
 既然现在的生活方式和以前相比有了如此大的不同，哪个时候人们过得更好？这问题不好回答，因为改变是多方面的，难以用简单的好坏来概括；若是细分讨论的话，自然是有好有坏了，说了当没说。如果非要用一个好坏来概括我们生活的改变的话，我觉得整体上我们现在的生活肯定是比以前更好了。现在的人们身体更健康，寿命更长；劳动不像以前那么累了，但能享受到的生活品质却比以前有了明显要好；人们的视野从以前的只看自家的一亩三分地扩展到了全省全国甚至全世界；以前的尖端科技往往只有社会金字塔尖的人才能享受，但现在常出现在寻常百姓家。这些都是科技带来的好处，但问题也随之而现。由于变化剧烈，很多人只是被动地接受科技进步，被新发明的各种工具牵着跑。很多人不是主动去利用科技来创造更优质的生活，而是躺好了等各种刺激。人们沉迷于游戏，忘情于网络口水仗，刷小视频一刷就是一天...时间就这么过去了。这有什么问题吗？以前人们被生活的重担压得透不过气来时，不是也没时间做别的事吗？现在只是把当牛做马的时间用来“享受”生活了而已。其实不一样的，人们以前没得选，而现在他们本来有更多的选择。其实就算一些人天天打游戏，刷视频，历史的车轮还是会咕噜咕噜往前滚，社会依旧会进步，因为有很多别的人在努力。就算是大部分人都沉迷网络了，也没关系；当年抽大烟的人那么多，传说都到“中原几无可以御敌之兵，且无可以充饷之银”的地步了，官家一禁一销，还是能慢慢把形势扭转过来。一番整顿后，社会依旧安好，只是那些被历史的车轮碾过的人成了炮灰。兔死狐悲，炮灰还是能少一个算一个吧。   
 
