--- a/content/cn/2020-05-05-hope.md
+++ b/content/cn/2020-05-05-hope.md
@@ -16,15 +16,15 @@ tags: []
 
 > I don’t like to pooh-pooh other studies, but that’s not an adequate study and everybody in the field feels that.   
 
-额，每个人都这么看？听起来有点川大统领的风格，难道福奇博士被川总的话风吹晕了？建议福奇博士以后跟川大统领一起开过新闻发布会后找个人少的地方，一个人静静，忘掉川总的激情，重回严谨。福奇博士的意思可能是这个研究样本量不够，所以无法得到确切结论。   
+额，每个人都这么看？听起来有点川大统领的风格，难道福奇博士跟川总一起见了几回记者后被川总的话风吹晕了？建议福奇博士以后跟川大统领一起开过新闻发布会后找个人少的地方静一静，忘掉川总的激情，重回严谨。福奇博士的意思可能是这个研究样本量不够，所以无法得到确切结论。   
 
-那中国团队这么看自己的结果呢？中国临床试验负责人曹彬认为虽然中方试验的患者数量没有达到起初设计要求的人数（因为武汉感染人数减少，招募不到足够的符合条件的病人），但如果瑞德西韦有显著疗效的话，在两百多人的临床试验里应该能看出效果了，而实际是处理组和对照组相比差别不大。对于美方的试验，曹彬认为他们的考察指标单一，宽松，较容易得出阳性结果。    
+那中国团队怎么看自己的结果呢？中国临床试验负责人曹彬认为虽然中方试验的患者数量没有达到起初设计要求的人数（因为武汉感染人数减少，招募不到足够的符合条件的病人），但如果瑞德西韦有显著疗效的话，在两百多人的临床试验里应该能看出效果了，而实际是处理组和对照组相比差别不大。对于美方的试验，曹彬认为他们的考察指标单一，宽松，较容易得出阳性结果。    
 
-人们都过度关注中美临床试验结论的差异，其实我觉得中美试验的结论是比较一致的。比如中方的结果显示，虽然整体上瑞德西韦没有显著加快病人康复速度，也没有显著降低死亡率，但若用药及时（发病后十天内），接受瑞德西韦治疗的病人康复速度是更快的（有这趋势，但由于样本量小，暂不能下明确结论）。而美方的试验虽然显示瑞德西韦可以加快病人康复的速度，但在降低死亡率上没有明显的效果（处理组 8%; 对照组 11%）。所以，粗线条地看，瑞德西韦可能在细分人群里会加快康复速度，但总的来说，不能有效地降低死亡率。中美研究团队在试验设计上有个差异是需要特别注意的，中方试验募集的病人要求在发病十二天内入组，且是重症患者，而美方招募的病人没有这两条限制。我们知道，新冠肺炎病人有较大概率自愈，治疗的压力挑战是如何降低重症患者死亡率，我个人觉得中方团队的结果对了解瑞德西韦治疗重症患者的疗效更具参考价值。   
+人们都过度关注中美临床试验结论的差异，其实我觉得中美试验结论一致的地方更值得讨论。比如中方的结果显示，虽然整体上瑞德西韦没有显著加快病人康复速度，也没有显著降低死亡率，但若用药及时（发病后十天内），接受瑞德西韦治疗的病人康复速度是更快的（有这趋势，但由于样本量小，暂不能下明确结论）。而美方的试验虽然显示瑞德西韦可以加快病人康复的速度，但在降低死亡率上没有明显的效果（处理组 8%; 对照组 11%）。所以，粗线条地看，瑞德西韦可能在细分人群里会加快康复速度，但总的来说，不能有效地降低死亡率。中美研究团队在试验设计上有个差异是需要特别注意的，中方试验募集的病人要求在发病十二天内入组，且是重症患者，而美方招募的病人没有这两条限制。我们知道，新冠肺炎病人有较大概率自愈，治疗上的挑战主要是需降低重症患者的死亡率。我个人觉得中方团队的结果对了解瑞德西韦治疗重症患者的疗效更具参考价值。   
 
-综合现在能看看到的信息，我的感觉是瑞德西韦能加快感染初期的病人的康复速度，但和之前人们期待的神药间有较大的差距，不是治疗新冠肺炎的杀手锏。这一点我想福奇博士也是清楚的，他在强调了瑞德西韦“清晰，正面”的疗效后说，当然，瑞德西韦还不够好，但这让他想起了当初研发抗艾药物的经历：  
+综合现在能看看到的信息，我觉得瑞德西韦能加快感染初期的病人的康复速度，但和之前人们期待的神药间有较大的差距，不是治疗新冠肺炎的杀手锏。这一点我想福奇博士也是清楚的，他在强调了瑞德西韦“清晰，正面”的疗效后说，当然，瑞德西韦还不够好，但这让他想起了当初研发抗艾药物的经历：  
 
-> It was reminiscent of 34 years ago in 1986 when we were struggling for drugs for HIV...We did the first randomized, placebo-controlled trial with AZT, which turned out to give an effect that was modest. But that was not the end game because building on that every year after, we did better and better. We had better drugs of the same type and we had drugs against different targets.   
+> It was reminiscent of 34 years ago in 1986 when we were struggling for drugs for HIV...We did the first randomized, placebo-controlled trial with AZT, which turned out to give an effect **that was modest**. But that was not the end game because building on that every year after, we did better and better. We had better drugs of the same type and we had drugs against different targets.   
 
 效果一般，但是个好的开始。    
 
@@ -32,7 +32,7 @@ tags: []
 
 这样疫情未来会怎样？谁也不清楚。控制不住病毒，被迫群体免疫？研发出疫苗，主动群体免疫？等待真正的特效药？我想，我们需要做好在较长的未来跟新冠病毒共存的准备。就算现在我们的防疫措施在世界范围内控制住了病毒扩散，但谁也不知道它是否会卷土从来；就算我们群体免疫了（不管是被动还是主动），但谁也不知道它是否会变异成新版本，导致免疫失效。    
 
-医生和科研人员在和病毒赛跑，但跑得过吗？我们不知道。很担心医生和科研人员辛辛苦苦找到的治疗方案在变异迅速的病毒面前失效，而病毒在人群中传播越多，迭代越快，变异度就会越大。在政客们扯皮的时候，病毒分秒必争地在找新宿主。这场仗我们打得赢吗？这真不是一个单纯的科学问题。   
+医生和科研人员在和病毒赛跑，但跑得过吗？我们不知道。我很担心医生和科研人员辛辛苦苦找到的治疗方案在变异迅速的病毒面前失效，而病毒在人群中传播越多，迭代越快，变异度就会越大。在政客们扯皮的时候，病毒分秒必争地在找新宿主。这场仗我们打得赢吗？这真不是一个单纯的科学问题。   
 
 
 
