--- a/content/cn/2020-05-05-hope.md
+++ b/content/cn/2020-05-05-hope.md
@@ -10,7 +10,7 @@ tags: []
 
 新冠肺炎爆发初期，由于其传播快，隐蔽性高，在中国造成了恐慌，人人自危。这时，瑞德西韦在美国成功治好重症病人的消息传到中国，像一束明亮的光照进被阴霾裹住的中国人民心里，给大家以希望，由此瑞德西韦在中国被叫作“人民的希望”。   
 
-最近，三份关于瑞德西韦对新冠肺炎疗效的临床报告发布，分别来自中国（中日友好医院，协和医院的管队，在武汉开展，招募了237名患者），美国（由美国国家过敏和传染病研究所主持，全世界共有1063名患者参加）的研究团队和吉利德公司。中国团队的报告是以论文的形式发表在《柳叶刀》上，其结果显示瑞德西韦不能加快危重症住院患者的恢复速度，也未降低病死率。美国团队的结果是由美国国家过敏和传染病研究所主任福奇博士口头介绍的，而他们的研究显示瑞德西韦可以缩短患者康复的时间；而吉利德公司的则是以新闻的形式发布在自己公司网站上，该公司的临床试验不是看瑞德西韦的疗效的，而是比较用药五天和用药十天对患者的康复进程有没有影响，得到的结果是用药五天和十天患者康复的进度一样。后二者的结果还没有经过同行评审。吉利德公司的试验没有设安慰剂对照组，那用药五天和十天是一样有效还是一样无效呢？光看他们的试验，我们无法了解，但该试验可以看作福奇博士公布的研究的补充结果，既然福奇先生说瑞德西韦有效，那吉利德公司的结果自然是一样有效了（这是默认二者在试验细节上可比的情况）。在不降低疗效的情况下，能少用五天药就少用五天吧，这样同量的药能多救一倍的人，好事。    
+最近，三份关于瑞德西韦对新冠肺炎疗效的临床报告发布，分别来自中国（中日友好医院，协和医院的团队，在武汉开展，招募了237名患者），美国（由美国国家过敏和传染病研究所主持，全世界共有1063名患者参加）的研究团队和吉利德公司。中国团队的报告是以论文的形式发表在《柳叶刀》上，其结果显示瑞德西韦不能加快危重症住院患者的恢复速度，也未降低病死率。美国团队的结果是由美国国家过敏和传染病研究所主任福奇博士口头介绍的，而他们的研究显示瑞德西韦可以缩短患者康复的时间；而吉利德公司的则是以新闻的形式发布在自己公司网站上，该公司的临床试验不是看瑞德西韦的疗效的，而是比较用药五天和用药十天对患者的康复进程有没有影响，得到的结果是用药五天和十天患者康复的进度一样。后二者的结果还没有经过同行评审。吉利德公司的试验没有设安慰剂对照组，那用药五天和十天是一样有效还是一样无效呢？光看他们的试验，我们无法了解，但该试验可以看作福奇博士公布的研究的补充结果，既然福奇先生说瑞德西韦有效，那吉利德公司的结果自然是一样有效了（这是默认二者在试验细节上可比的情况）。在不降低疗效的情况下，能少用五天药就少用五天吧，这样同量的药能多救一倍的人，好事。    
 
 中美研究团队结果的不一致引发了大量讨论，瑞德西韦到底有没有效？被问到如何看待中方研究结果时，福奇博士回应道：   
 
@@ -30,7 +30,7 @@ tags: []
 
 既然效果一般，那福奇博士为啥在介绍临床试验结果时看起来那么乐观呢？我想，因为瑞德西韦是人民的希望。当初，瑞德西韦像一束阳光照进惊恐的中国人民心里，驱散了许多阴霾，现在处于疫情中心的美国人民也需要这道阳光。希望本是无所谓有，无所谓无的，重要的是人们相信它在。从这个角度说，不必纠结瑞德西韦到底是不是神药，重要的是它的光能继续照进人们心里。   
 
-这样疫情未来会怎样？谁也不清楚。控制不住病毒，被迫群体免疫？研发出疫苗，主动群体免疫？等待真正的特效药？我想，我们需要做好在较长的未来跟新冠病毒共存的准备。就算现在我们的防疫措施在世界范围内控制住了病毒扩散，但谁也不知道它是否会卷土从来；就算我们群体免疫了（不管是被动还是主动），但谁也不知道它是否会变异成新版本，导致免疫失效。    
+疫情未来会怎样？谁也不清楚。控制不住病毒，被迫群体免疫？研发出疫苗，主动群体免疫？等待真正的特效药？我想，我们需要做好在较长的未来跟新冠病毒共存的准备。就算现在我们的防疫措施在世界范围内控制住了病毒扩散，但谁也不知道它是否会卷土从来；就算我们群体免疫了（不管是被动还是主动），但谁也不知道它是否会变异成新版本，导致免疫失效。    
 
 医生和科研人员在和病毒赛跑，但跑得过吗？我们不知道。我很担心医生和科研人员辛辛苦苦找到的治疗方案在变异迅速的病毒面前失效，而病毒在人群中传播越多，迭代越快，变异度就会越大。在政客们扯皮的时候，病毒分秒必争地在找新宿主。这场仗我们打得赢吗？这真不是一个单纯的科学问题。   
 
