--- a/content/cn/2020-05-05-hope.md
+++ b/content/cn/2020-05-05-hope.md
@@ -20,7 +20,9 @@ tags: []
 
 那中国团队怎么看自己的结果呢？中国临床试验负责人曹彬认为虽然中方试验的患者数量没有达到起初设计要求的人数（因为武汉感染人数减少，招募不到足够的符合条件的病人），但如果瑞德西韦有显著疗效的话，在两百多人的临床试验里应该能看出效果了，而实际是处理组和对照组相比差别不大。对于美方的试验，曹彬认为他们的考察指标单一，宽松，较容易得出阳性结果。    
 
-人们都过度关注中美临床试验结论的差异，其实我觉得中美试验结果一致的地方更值得讨论。比如中方的结果显示，虽然整体上瑞德西韦没有显著加快病人康复速度，也没有显著降低死亡率，但若用药及时（发病后十天内），接受瑞德西韦治疗的病人康复速度是更快的（有这趋势，但由于样本量小，暂不能下明确结论）。而美方的试验虽然显示瑞德西韦可以加快病人康复的速度，但在降低死亡率上没有明显的效果（处理组 8%; 对照组 11%）。所以，粗线条地看，瑞德西韦可能在细分人群里会加快康复速度，但总的来说，不能有效地降低死亡率。中美研究团队在试验设计上有个差异是需要特别注意的，中方试验募集的病人要求在发病十二天内入组，且是重症患者，而美方招募的病人没有这两条限制。我们知道，新冠肺炎病人有较大概率自愈，治疗上的挑战主要是需降低重症患者的死亡率。我个人觉得中方团队的结果对了解瑞德西韦治疗重症患者的疗效更具参考价值。   
+人们都过度关注中美临床试验结论的差异，其实我觉得中美试验结果一致的地方更值得讨论。比如中方的结果显示，虽然整体上瑞德西韦没有显著加快病人康复速度，也没有显著降低死亡率，但若用药及时（发病后十天内），接受瑞德西韦治疗的病人康复速度是更快的（有这趋势，但由于样本量小，暂不能下明确结论）。而美方的试验虽然显示瑞德西韦可以加快病人康复的速度，但在降低死亡率上没有明显的效果（处理组 8%; 对照组 11%）。所以，粗线条地看，瑞德西韦可能在细分人群里会加快康复速度，但总的来说，不能有效地降低死亡率。虽然中美两个团队的试验细节，评分标准又诸多不同，但是他们的结果在以上两点其实并无太大的分歧。         
+
+中美研究团队在试验设计上有个差异是需要特别注意的，中方试验募集的病人要求在发病十二天内入组，且是重症患者，而美方招募的病人没有这两条限制。我们知道，新冠肺炎病人有较大概率自愈，治疗上的挑战主要是需降低重症患者的死亡率。我个人觉得中方团队的结果对了解瑞德西韦治疗重症患者的疗效更具参考价值。   
 
 综合现在能看看到的信息，我觉得瑞德西韦能加快感染初期的病人的康复速度，但和之前人们期待的神药间有较大的差距，不是治疗新冠肺炎的杀手锏。这一点我想福奇博士也是清楚的，他在强调了瑞德西韦“清晰，正面”的疗效后说，当然，瑞德西韦还不够好，但这让他想起了当初研发抗艾药物的经历：  
 
@@ -50,4 +52,4 @@ tags: []
 
 
 
-。
+
