--- a/content/cn/2020-05-05-hope.md
+++ b/content/cn/2020-05-05-hope.md
@@ -10,7 +10,7 @@ tags: []
 
 新冠肺炎爆发初期，由于其传播快，隐蔽性高，在中国造成了恐慌，人人自危。这时，瑞德西韦在美国成功治好重症病人的消息传到中国，像一束明亮的光照进被阴霾裹住的中国人民心里，给大家以希望，由此瑞德西韦在中国被叫作“人民的希望”。   
 
-最近，三份关于瑞德西韦对新冠肺炎疗效的临床报告发布，分别来自中国（中日友好医院，协和医院的团队，在武汉开展，招募了237名患者），美国（由美国国家过敏和传染病研究所主持，全世界共有1063名患者参加）的研究团队和吉利德公司。中国团队的报告是以论文的形式发表在《柳叶刀》上，其结果显示瑞德西韦不能加快危重症住院患者的恢复速度，也未降低病死率。美国团队的结果是由美国国家过敏和传染病研究所主任福奇博士口头介绍的，而他们的研究显示瑞德西韦可以缩短患者康复的时间；而吉利德公司的则是以新闻的形式发布在自己公司网站上，该公司的临床试验不是看瑞德西韦的疗效的，而是比较用药五天和用药十天对患者的康复进程有没有影响，得到的结果是用药五天和十天患者康复的进度一样。后二者的结果还没有经过同行评审。吉利德公司的试验没有设安慰剂对照组，那用药五天和十天是一样有效还是一样无效呢？光看他们的试验，我们无法了解，但该试验可以看作福奇博士公布的研究的补充结果，既然福奇先生说瑞德西韦有效，那吉利德公司的结果自然是一样有效了（这是默认二者在试验细节上可比的情况）。在不降低疗效的情况下，能少用五天药就少用五天吧，这样同量的药能多救一倍的人，好事。    
+最近，三份关于瑞德西韦对新冠肺炎疗效的临床报告发布，分别来自中国（中日友好医院，协和医院的团队，在武汉开展，招募了237名患者），美国（由美国国家过敏和传染病研究所主持，全世界共有1063名患者参加）的研究团队和吉利德公司。中国团队的报告是以论文的形式发表在《柳叶刀》上，其结果显示瑞德西韦不能加快危重症住院患者的恢复速度，也未降低病死率。美国团队的结果是由美国国家过敏和传染病研究所主任福奇博士口头介绍的，他们的研究显示瑞德西韦可以缩短患者康复的时间；吉利德公司的则是以新闻的形式发布在自己公司网站上，该公司的临床试验不是看瑞德西韦的疗效的，而是比较用药五天和用药十天对患者的康复进程有没有影响，得到的结果是用药五天和十天患者康复的进度一样。后二者的结果还没有经过同行评审。吉利德公司的试验没有设安慰剂对照组，那用药五天和十天是一样有效还是一样无效呢？光看他们的试验，我们无法了解，但该试验可以看作福奇博士公布的研究的补充结果，既然福奇先生说瑞德西韦有效，那吉利德公司的结果自然是一样有效了（这是默认二者在试验细节上可比的情况）。在不降低疗效的情况下，能少用五天药就少用五天吧，这样同量的药能多救一倍的人，好事。    
 
 中美研究团队结果的不一致引发了大量讨论，瑞德西韦到底有没有效？被问到如何看待中方研究结果时，福奇博士回应道：   
 
