--- a/content/cn/2020-05-20-xiaohui.md
+++ b/content/cn/2020-05-20-xiaohui.md
@@ -10,11 +10,11 @@ tags: []
 
 小灰与我素未谋面，但我往家里打电话时，常听父母提起它，不时还收到家里发来的它的相片。既然看过照片，也算是见过面的，不过毕竟没有亲眼见过，算是传统意义上的“素未谋面”吧。   
 
-说小灰前，得说说我父母的养猫史。我家本来没有养猫狗的习惯，父母也说不上对宠物有特别的喜爱，但由于家里有段时间闹耗子，让人不甚其烦，于是我妈从朋友那里领养了一只白猫妹子，本意是要震慑耗子。我家住在一个比较老的单元楼里的第六和第七楼（这楼一共七层），几年前在楼顶上盖了个小瓦房，搭了个凉棚，并围了个小花园出来。还算比较宽敞。所以小猫来到我家后，就没有拴着养，我妈说要给它自由，让它楼上楼下到处跑。到了我家半年后，这只可爱的小白猫成功地把我父母变成了猫奴，自此我给家里打电话时聊猫的时间越来越多。能听得出来，这个小生灵给家里带来了许多欢乐。由于没有拴着养，小白猫有时会翻墙跑到别的单元楼，与其他猫厮混，于是肚子渐渐地大了起来，产下两只小白猫，一公一母（我父母说是“小男猫”和“小女猫”）。我父母给它们起名叫“小一”和“小二”。对了，它们的母亲也有名字，就叫“小猫”。父母还在家里猜小一小二的爸爸长什么样，直到有一天看到一直大黑猫进了我家楼顶的院子，小白猫对它很是友好，于是恍然，这估计就是小一小二的爸爸了。我妈还专门在门口多备了猫粮，说这是小猫的朋友，家里得款待。    
+说小灰前，得说说我父母的养猫史。我家本来没有养猫狗的习惯，父母也说不上对宠物有特别的喜爱，但由于家里有段时间闹耗子，让人不胜其烦，于是我妈从朋友那里领养了一只白猫妹子，本意是要震慑耗子。我家住在一个比较老的单元楼里的第六和第七楼（这楼一共七层），几年前在楼顶上盖了个小瓦房，搭了个凉棚，并围了个小花园出来。还算比较宽敞。所以小猫来到我家后，就没有拴着养，我妈说要给它自由，让它楼上楼下到处跑。到了我家半年后，这只可爱的小白猫成功地把我父母变成了猫奴，自此我给家里打电话时聊猫的时间越来越多。能听得出来，这个小生灵给家里带来了许多欢乐。由于没有拴着养，小白猫有时会翻墙跑到别的单元楼，与其他猫厮混，于是肚子渐渐地大了起来，产下两只小白猫，一公一母（我父母说是“小男猫”和“小女猫”）。我父母给它们起名叫“小一”和“小二”。对了，它们的母亲也有名字，就叫“小猫”。父母还在家里猜小一小二的爸爸长什么样，直到有一天看到一直大黑猫进了我家楼顶的院子，小白猫对它很是友好，于是恍然，这估计就是小一小二的爸爸了。我妈还专门在家门口多备了猫粮，说这是小猫的朋友，家里得款待。    
 
-在小一小二大概一个月大的时候，一天晚上，我妈听到两只小猫在顶楼叫得很凄厉，似乎受到了极大的惊吓。上楼查看，无果。第二天她到顶楼去看小猫，又听到了小猫害怕的叫声。一看，发现小一小二躲在它们母亲身后，而它们前面站着一个灰灰的小东西。这灰灰的小东西就是小灰了。当时小灰正在受到小一小二母亲的驱逐。小灰的年纪跟小一和小二相仿，不知道它是从哪里来的，当时也不知为何小一和小二如此怕它。我妈说，看起来这个小东西对小一小二并无恶意，就是想和它们玩耍。被猫妈驱逐时，它就退后几步，但并不走远，边逃开边怯生生地扭头观察。一看猫妈不追打它了，它又慢慢地靠近，一点，又一点，于是又一次被猫妈喝跑。小灰就这么时近时远地跟我家的三只小猫僵持了几天。我妈说它似乎很喜欢我家，就算是受到了三只白猫不友好的对待，它也完全没有要离开的意思，就这么坚持着，直到最后被大家接纳，能一起玩耍。既然小灰看来对小一小二没什么恶意，那为什么两小猫这么怕它呢？后来我们猜测，小一小二出生后，除了它们的母亲和我父母，就没有见过别的猫和人，所以骤然看到这个灰灰的小东西向它们靠近，完全搞不懂这是个什么东西，当然害怕了。   
+在小一小二大概一个月大的时候，一天晚上，我妈听到两只小猫在顶楼叫得很凄厉，似乎受到了极大的惊吓。上楼查看，无果。第二天她到顶楼去看小猫，又听到了小猫害怕的叫声。一看，发现小一小二躲在它们母亲身后，而它们前面站着一个灰灰的小东西。这灰灰的小东西就是小灰了。当时小灰正在受到小一小二母亲的驱逐。小灰的年纪跟小一和小二相仿，不知道它是从哪里来的，当时也不知为何小一和小二如此怕它。我妈说，看起来这个小东西对小一小二并无恶意，就是想和它们玩耍。一被猫妈驱逐，它就退后几步，但并不走远，边逃开边怯生生地扭头观察。一看猫妈不追打它了，它又慢慢地靠近，一点，又一点，于是又一次被猫妈喝跑。小灰就这么时近时远地跟我家的三只小猫僵持了几天。我妈说它似乎很喜欢我家，就算是受到了三只白猫不友好的对待，它也完全没有要离开的意思，就这么坚持着，直到最后被大家接纳。既然小灰看来对小一小二没什么恶意，那为什么两小猫这么怕它呢？后来我们猜测，小一小二出生后，除了它们的母亲和我父母，就没有见过别的猫和人，所以骤然看到这个灰灰的小东西向它们靠近，完全搞不懂这是个什么东西，当然害怕了。   
 
-那几天我反复跟我妈说，不能收留这只来历不明的小猫，一来怕它身上不卫生，二来也因它可能是走失的有主宠物。我妈说，不收留它能把它送到哪里去呢？不知道是从哪里来的，而且它自己也不走。然后我妈就自言自语说，要是它过两天还不走，我就给它洗个澡；要是过一个周还不走，我就带它去打个疫苗；咱家小猫吃啥，它就吃啥。   
+那几天我反复跟我妈说，不能收留这只来历不明的小猫，一来怕它身上不卫生，二来也因它可能是走失的有主宠物。我妈说，不收留它能把它送到哪里去呢？不知道是从哪里来的，而且它自己也不走。然后我妈就像是自言自语地说，要是它过两天还不走，我就给它洗个澡；要是过一个周还不走，我就带它去打个疫苗；咱家小猫吃啥，它就吃啥。   
 
 我：？？？？？    
 
