--- a/content/cn/2020-05-20-xiaohui.md
+++ b/content/cn/2020-05-20-xiaohui.md
@@ -10,7 +10,7 @@ tags: []
 
 小灰与我素未谋面，但我往家里打电话时，常听父母提起它，不时还收到家里发来的它的相片。既然看过照片，也算是见过面的，不过毕竟没有亲眼见过，算是传统意义上的“素未谋面”吧。   
 
-说小灰前，得说说我父母的养猫史。我家本来没有养猫狗的习惯，父母也说不上对宠物有特别的喜爱，但由于家里有段时间闹耗子，让人不胜其烦，于是我妈从朋友那里领养了一只白猫妹子，本意是要震慑耗子。我家住在一个比较老的单元楼里的第六和第七楼（这楼一共七层），几年前在楼顶上盖了个小瓦房，搭了个凉棚，并围了个小花园出来。还算比较宽敞。所以小猫来到我家后，就没有拴着养，我妈说要给它自由，让它楼上楼下到处跑。到了我家半年后，这只可爱的小白猫成功地把我父母变成了猫奴，自此我给家里打电话时聊猫的时间越来越多。能听得出来，这个小生灵给家里带来了许多欢乐。由于没有拴着养，小白猫有时会翻墙跑到别的单元楼，与其他猫厮混，于是肚子渐渐地大了起来，产下两只小白猫，一公一母（我父母说是“小男猫”和“小女猫”）。我父母给它们起名叫“小一”和“小二”。对了，它们的母亲也有名字，就叫“小猫”。父母还在家里猜小一小二的爸爸长什么样，直到有一天看到一直大黑猫进了我家楼顶的院子，小白猫对它很是友好，于是恍然，这估计就是小一小二的爸爸了。我妈还专门在家门口多备了猫粮，说这是小猫的朋友，家里得款待。    
+说小灰前，得说说我父母的养猫史。我家本来没有养猫狗的习惯，父母也说不上对宠物有特别的喜爱，但由于家里有段时间闹耗子，让人不胜其烦，于是我妈从朋友那里领养了一只白猫妹子，本意是要震慑耗子。我家住在一个比较老的单元楼里的第六和第七楼（这楼一共七层），几年前在楼顶上盖了个小瓦房，搭了个凉棚，并围了个小花园出来。还算比较宽敞。所以小猫来到我家后，就没有拴着养，我妈说要给它自由，让它楼上楼下到处跑。到了我家半年后，这只可爱的小白猫成功地把我父母变成了猫奴，自此我给家里打电话时聊猫的时间越来越多。能听得出来，这个小生灵给家里带来了许多欢乐。由于没有拴着养，小白猫有时会翻墙跑到别的单元楼，与其他猫厮混，于是肚子渐渐地大了起来，产下两只小白猫，一公一母（我父母说是“小男猫”和“小女猫”）。我父母给它们起名叫“小一”和“小二”。对了，它们的母亲也有名字，就叫“小猫”。父母还在家里猜小一小二的爸爸长什么样，直到有一天看到一只大黑猫进了我家楼顶的院子，白猫妹子对它很是友好，于是恍然，这估计就是小一小二的爸爸了。我妈还专门在家门口多备了猫粮，说这是小猫的朋友，家里得款待。    
 
 在小一小二大概一个月大的时候，一天晚上，我妈听到两只小猫在顶楼叫得很凄厉，似乎受到了极大的惊吓。上楼查看，无果。第二天她到顶楼去看小猫，又听到了小猫害怕的叫声。一看，发现小一小二躲缩在它们母亲身后，而它们前面站着一个灰灰的小东西。这灰灰的小东西就是小灰了。当时小灰正在受到小一小二母亲的驱逐。小灰的年纪跟小一和小二相仿，不知道它是从哪里来的，当时也不知为何小一和小二如此怕它。我妈说，看起来这个小东西对小一小二并无恶意，就是想和它们玩耍。一被猫妈驱逐，它就退后几步，但并不走远，边逃开边怯生生地扭头观察。一看猫妈不追打它了，它又慢慢地靠近，一点，又一点，然后又一次被猫妈喝跑。小灰就这么时近时远地跟我家的三只小猫僵持了几天。我妈说它似乎很喜欢我家，就算是受到了三只白猫不友好的对待，它也完全没有要离开的意思，就这么坚持着，直到最后被大家接纳。既然小灰看来对小一小二没什么恶意，那为什么两小猫这么怕它呢？后来我们猜测，小一小二出生后，除了它们的母亲和我父母，就没有见过别的猫和人，所以骤然看到这个灰灰的小东西向它们靠近，完全搞不懂这是个什么东西，当然害怕了。   
 
@@ -18,9 +18,9 @@ tags: []
 
 我：？？？？？    
 
-我妈很喜欢小灰，甚至在三只小白猫接纳它之前我妈就喜欢上了这个小东西，说它身上有种坚韧；另外，长得还很可爱。   
+我妈很喜欢小灰，甚至在三只小白猫接纳它之前我妈就喜欢上了这个小东西，说它身上有种坚韧；另外，它长得还很可爱。   
 
-不久后，小灰就正式成为我家的一员。它一点不怕生，我妈说只要有吃的，它就放开肚子吃。有时没吃饱，就跟在人后头，喵喵叫。小一小二也不再怕它，估计是终于认出了这是个同类，虽然毛色不一样。小灰虽然能跟小一小二玩耍了，但睡觉时，人家两兄妹就依偎在一起，抱头大睡；小灰这时就不能靠近了，只能在离它两不远的地方一个人睡。小灰的性格很温和，它虽然渴望友谊，却不过分地靠近；有时小猫们和它打闹，虽然它身强力壮，但却不大还击，总是让着别人。我妈看温柔的小灰有些孤单，就陪它聊天，说小灰，你爸爸妈妈呢？你有兄弟姐妹吗？你想它们吗？想着小灰的家人若在，它或许能更快乐些。小灰似乎能听懂别人的关心，我妈说它本来不很粘人，但从那次“谈心”后，小灰跟她的互动就越来越多，好像明白了她是关心自己的。    
+不久后，小灰就正式成为我家的一员。它一点不怕生，我妈说只要有吃的，它就放开肚子吃。有时没吃饱，就跟在人后头，喵喵叫。小一小二也不再怕它，估计是终于认出了这是个同类，虽然毛色不一样。小灰虽然能跟小一小二玩耍了，但睡觉时，人家两兄妹就依偎在一起，抱头大睡；小灰这时就不能靠近了，只能在离它两不远的地方一个人睡。小灰的性格很温和，它虽然渴望友谊，却不过分地靠近；有时小猫们和它打闹，向它扑咬，虽然它身强力壮，但却不大还击，总是让着别人。温柔的小灰，别人理它时，它就开心跟人玩耍，别人不搭理它时，它就一个人静静地待着。我妈看小灰有时挺孤单，就陪它聊天，说小灰，你爸爸妈妈呢？你有兄弟姐妹吗？你想它们吗？想着小灰的家人若在，它或许能更快乐些。小灰似乎能听懂别人的关心，我妈说它本来不很粘人，但从那次“谈心”后，小灰跟她的互动就越来越多，好像明白了她是关心自己的。    
 
 小猫们慢慢长大了，于是我爸妈就让它们平时都待在顶楼上，不在家里过夜了，不然太闹腾。不过最近大黑猫不时会来到我家楼顶，而且常和我家的猫妈联合起来欺负小灰。小灰被追打，只能灰头土脸地抱头猫窜，很害怕。我父母看着心疼，不但帮它驱逐大黑猫，还特许它在家里过夜。我妈说因为怕大黑猫，小灰都有点不敢上楼顶了。可楼顶上多好啊，有花园，有水池，本来是小灰的乐土。我都替小灰感到憋屈，跟我妈说，还是要多带小灰去顶楼转转，不能在自己家里还这么担惊受怕地过日子。     
 
