--- a/content/cn/2020-05-20-xiaohui.md
+++ b/content/cn/2020-05-20-xiaohui.md
@@ -34,6 +34,6 @@ tags: []
 我想，小灰哪怕是从家里跑出去，在外头野着撒欢，不再回来了也好。虽然结果也是看不着它了，但毕竟直知道它应该还好好的，心里不至于这么难过。    
 
 
-跟父母关于小灰的对话变成了不再更新的记忆，趁没忘前我把这记忆变成文字，并以此文字纪念素未谋面的小灰。   
+跟父母关于小灰日常的对话变成了不再更新的记忆，趁没忘前我把这记忆变成文字，并以此文字纪念素未谋面的小灰。   
 
 
