--- a/content/cn/2020-05-09-limits.md
+++ b/content/cn/2020-05-09-limits.md
@@ -20,7 +20,7 @@ tags: []
 
 ### 辣椒面
 
-这不是饭也不是菜，就是辣椒面，我隔着老远闻到的。幺舅公家有个大石臼，有时他会用这个石臼磕辣椒面。舅公在他家门口磕辣椒的时候，我在我家这边就能闻到那飘过来的香气。这味道像是来自辣椒，但又像不只是辣椒。我现在回想，觉得舅公可能加了芝麻，花生等跟着辣椒一起磕才能有这味，但又觉得这不大可能，因为当时他没有这么阔错。为什么幺舅公家磕辣椒这么香，我问过家人几回，但他们对这事没有什么印象，虽然这在我脑子里记得特别清晰。 
+这不是饭也不是菜，就是辣椒面，我隔老远能闻到它的香气。幺舅公家有个大石臼，有时他会用这个石臼磕辣椒面。舅公在他家门口磕辣椒的时候，我在我家这边就能闻到那飘过来的香。这味道像是来自辣椒，但又不只是辣椒，单是闻这味道就让人唾液分泌，食欲大开。我现在回想，觉得舅公可能加了芝麻，花生跟辣椒一起磕，才能磕出这味道。虽然这么想，但也觉得这不大可能，因为当时舅公没有这么阔错。为什么幺舅公家磕辣椒这么香，我问过家人几回，但奇怪的是他们对这事没有什么印象，虽然这在我脑子里记得特别清晰。 
 
 ### 青蛙稀饭
 
@@ -28,7 +28,7 @@ tags: []
 
 ### 豌豆尖蛋汤
 
-豌豆尖是豌豆顶端的嫩叶子。当季的时候，去自家地里采了就能做汤喝，我最喜欢的是豌豆尖蛋汤。拿两个鸡蛋加盐打散，倒进热油锅里煎，农村火大，锅大，鸡蛋下锅就滋滋地膨胀开来。这时往锅里加水，烧开后把豌豆尖放进去，一烫就熟。出锅前加点盐调汤味就可以了。豌豆尖的清香配鸡蛋很合适，何况是刚从地里采的，又嫩又新鲜。吃了鸡蛋和豌豆尖，再到上一碗汤泡饭...唉，饿了。     
+豌豆尖是豌豆顶端的嫩叶子。当季的时候，去自家地里采了就能做汤喝，我最喜欢的是豌豆尖蛋汤。拿两个鸡蛋加盐打散，锅里加块猪油热化，然后把鸡蛋倒进热油锅里煎。农村火大，锅大，鸡蛋下锅就滋滋地膨胀开来。这时往锅里加水，烧开后把豌豆尖放进去，一烫就熟。出锅前加点盐调汤味就可以了。可能是加了猪油的缘故，煮好的汤泛白，看起来浓浓的；豌豆尖的清香配鸡蛋很合适，何况是刚从地里采的，又嫩又新鲜。吃了鸡蛋和豌豆尖，再到上一碗汤泡饭...唉，饿了。     
 
 现在下厨，各种肉，菜都不缺了，时常也能做出好吃的菜肴，大快朵颐一番，但没有一个像那些小时候的那些味道让我记在心里，念念不忘。我也没有尝试去复现那些味道，因为我知道记忆是最会骗人的，当初不一定如我记得那般好；我也不会尝试去复现那些味道，因为我知道或许当初确实如我记得的那么好，但我已不是那个捧着猪油饭，希望把每个含着香气的分子都吸进鼻子的孩子了。
 
