--- a/content/cn/2020-05-09-limits.md
+++ b/content/cn/2020-05-09-limits.md
@@ -24,11 +24,11 @@ tags: []
 
 ### 青蛙稀饭
 
-青蛙吃害虫，所以我们不能吃青蛙。可惜（幸亏）我明白这个道理是在吃了青蛙稀饭很久以后。幺舅公家大儿子叫润年，我叫他润年表叔。他年纪比我大好几岁，当年可能在上初中，而我可能刚上小学，反正还没有来得及学青蛙吃害虫。润年表叔有个弟弟，叫二桃，年纪比我小一岁。虽然按辈分，二桃也是表叔，但我却不这么叫他，只叫二桃。润年表叔爱钓鱼，常拿着自己用竹子削的鱼竿去河边，一待大半天，有时也顺便抓点青蛙回来。有一次，他逮了几只青蛙，回家后就在他家厨房里忙活，说要做点好东西给我和二桃吃。虽然还是下午，但天已不亮了；虽然天已不亮了，但也没有开灯，厨房里黑黑的。黑黑的厨房里有个黑黑的灶，灶上烧着柴，柴火红亮红亮的，映红了灶上烧着的一口黑黑的锅。锅里有一小碗米，和着烧开的水咕噜咕噜地滚着。不知过了多久，润年表叔端出一碗稀饭来，有点泛灰，可能是柴火灰落了不少进去，而且只有一小碗。我喝了一口，很鲜，里面有一小块白白的肉，被我吃到了，很嫩，心里惊讶世间居然有这么鲜美的东西。现在回想，那可能是块青蛙的大腿肉。后来吃了很多次蛙，有不少是个大肉厚的牛蛙，但都觉得没有那碗稀饭香。   
+青蛙吃害虫，所以我们不能吃青蛙。可惜（幸亏）我明白这个道理是在吃了青蛙稀饭很久以后。幺舅公家大儿子叫润年，我叫他润年表叔。他年纪比我大好几岁，当年可能在上初中，而我可能刚上小学，反正还没有来得及学青蛙吃害虫。润年表叔有个弟弟，叫二桃，年纪比我小一岁。虽然按辈分，二桃也是表叔，但我却不这么叫他，只叫二桃。润年表叔爱钓鱼，常拿着自己用竹子削的鱼竿去河边，一待大半天，能不能钓到鱼得碰运气；有时路过田边，他也回顺便去抓点青蛙。有一次，他逮了几只青蛙，回家后就在他家厨房里忙活，说要做点好东西给我和二桃吃。虽然还是下午，但天已不亮了；虽然天已不亮了，但也没有开灯，厨房里黑黑的。黑黑的厨房里有个黑黑的灶，灶上烧着柴，柴火红亮红亮的，映红了灶上烧着的一口黑黑的锅。锅里有一小碗米，和着烧开的水咕噜咕噜地滚着。不知过了多久，润年表叔端出一碗稀饭来，有点泛灰，可能是柴火灰落了不少进去，而且只有一小碗。我喝了一口，很鲜，里面有一小块白白的肉，被我吃到了，很嫩，心里惊讶世间居然有这么鲜美的东西。现在回想，那可能是块青蛙的大腿肉。后来吃了很多次蛙，有不少是个大肉厚的牛蛙，但都觉得没有那碗稀饭香。另有一回，润年表叔钓了几条河鱼回来，他在鱼身上抹了点盐，然后去地里摘了几片芋头叶裹着鱼烤。那混着芋头叶味儿的鱼香也让我记忆犹新，放佛不久前才吃过；而那已是二十来年前了。
 
 ### 豌豆尖蛋汤
 
-豌豆尖是豌豆顶端的嫩叶子。当季的时候，去自家地里采了就能做汤喝，我最喜欢的是豌豆尖蛋汤。拿两个鸡蛋加盐打散，锅里加块猪油热化，然后把鸡蛋倒进热油锅里煎。农村火大，锅大，鸡蛋下锅就滋滋地膨胀开来。这时往锅里加水，烧开后把豌豆尖放进去，一烫就熟。出锅前加点盐调汤味就可以了。可能是加了猪油的缘故，煮好的汤泛白，看起来浓浓的；豌豆尖的清香配鸡蛋很合适，何况是刚从地里采的，又嫩又新鲜。吃了鸡蛋和豌豆尖，再到上一碗汤泡饭...唉，饿了。     
+豌豆尖是豌豆顶端的嫩叶子，当季的时候，去自家地里采了就能做汤喝，我最喜欢的是豌豆尖蛋汤。拿两个鸡蛋加盐打散，锅里加块猪油热化，然后把鸡蛋倒进热油锅里煎。农村火大，锅大，鸡蛋下锅就滋滋地膨胀开来。这时往锅里加水，烧开后把豌豆尖放进去，一烫就熟。出锅前加点盐调汤味就可以了。可能是加了猪油的缘故，煮好的汤泛白，看起来浓浓的；豌豆尖的清香配鸡蛋很合适，何况是刚从地里采的，又嫩又新鲜。吃了鸡蛋和豌豆尖，再到上一碗汤泡饭...唉，饿了。     
 
 现在下厨，各种肉，菜都不缺了，时常也能做出好吃的菜肴，大快朵颐一番，但没有一个像那些小时候的那些味道让我记在心里，念念不忘。我也没有尝试去复现那些味道，因为我知道记忆是最会骗人的，当初不一定如我记得那般好；我也不会尝试去复现那些味道，因为我知道或许当初确实如我记得的那么好，但我已不是那个捧着猪油饭，希望把每个含着香气的分子都吸进鼻子的孩子了。
 
