--- a/content/cn/2020-05-09-limits.md
+++ b/content/cn/2020-05-09-limits.md
@@ -28,9 +28,9 @@ tags: []
 
 ### 豌豆尖蛋汤
 
-豌豆尖是豌豆顶端的嫩叶子，当季的时候，去自家地里采了就能做汤喝，我最喜欢的是豌豆尖蛋汤。拿两个鸡蛋加盐打散，锅里加块猪油热化，然后把鸡蛋倒进热油锅里煎。农村火大，锅大，鸡蛋下锅就滋滋地膨胀开来。这时往锅里加水，烧开后把豌豆尖放进去，一烫就熟。出锅前加点盐调汤味就可以了。可能是加了猪油的缘故，煮好的汤泛白，看起来浓浓的；豌豆尖的清香配鸡蛋很合适，何况是刚从地里采的，又嫩又新鲜。吃了鸡蛋和豌豆尖，再到上一碗汤泡饭...唉，饿了。     
+豌豆尖是豌豆顶端的嫩叶子，当季的时候，去自家地里采了就能做汤喝，我最喜欢的是豌豆尖蛋汤。拿两个鸡蛋加盐打散，锅里加块猪油热化，然后把鸡蛋倒进热油锅里煎。农村火大，锅大，鸡蛋下锅就滋滋地膨胀开来。这时往锅里加水，烧开后把豌豆尖放进去，一烫就熟。出锅前加点盐调汤味就可以了。可能是加了猪油的缘故，煮好的汤泛白，看起来浓浓的；豌豆尖的清香配鸡蛋很合适，何况是刚从地里采的，又嫩又新鲜。吃了鸡蛋和豌豆尖，再倒上一碗汤泡饭...唉，饿了。     
 
-现在下厨，各种肉，菜都不缺了，时常也能做出好吃的菜肴，大快朵颐一番，但没有一个像那些小时候的那些味道让我记在心里，念念不忘。我也没有尝试去复现那些味道，因为我知道记忆是最会骗人的，当初不一定如我记得那般好；我也不会尝试去复现那些味道，因为我知道或许当初确实如我记得的那么好，但我已不是那个捧着猪油饭，希望把每个含着香气的分子都吸进鼻子的孩子了。
+现在下厨，各种肉，菜都不缺了，时常也能做出好吃的菜肴，大快朵颐一番，但没有一个像那些小时候的那些味道让我记在心里，念念不忘。我也没有尝试去复现那些味道，因为我知道记忆是最会骗人的，当初不一定如我记得那般好；我也不会尝试去复现那些味道，因为我知道即使当初确实如我记得的那么好，但我已不是那个捧着猪油饭，希望把每个含着香气的分子都吸进鼻子的孩子了。
 
 
 
