--- a/content/cn/2020-05-09-limits.md
+++ b/content/cn/2020-05-09-limits.md
@@ -6,7 +6,7 @@ slug: food-in-mind
 categories: []
 tags: []
 ---
-我对小时候家里吃饭的记忆大抵如此：桌子的正中摆着一大碗酸菜汤，清汤略泛黄，里头没有一点油星；汤碗四周摆着几个蘸碟，里面混着辣椒粉，酱油和盐；再没别的菜肴，一家人就这么围坐着，夹起酸菜蘸着辣椒边吃边聊天。虽然现在想起来略觉清苦，但当时并不觉得，似乎吃饭就是这样的。虽然当初的饭菜大抵如此，但是也有些例外，这些例外印在我心里，成了我到现在不时想念的美好记忆。
+我对小时候家里吃饭的记忆大抵如此：桌子的正中摆着一大碗酸菜汤，清汤略泛黄，里头没有一点油星；汤碗四周摆着几个蘸碟，里面混着辣椒粉，酱油和盐；再没别的菜肴，一家人就这么围坐着，夹起酸菜蘸着辣椒边吃边聊天。虽然现在想起来略觉清苦，但当时并不觉得，似乎吃饭就是这样的。虽然当初的饭菜大抵如此，但是也有些例外，这些例外印在我心里，成了我到现在仍不时念想的美好记忆。
 
 ### 猪油拌饭
 
