--- a/content/cn/2020-05-09-limits.md
+++ b/content/cn/2020-05-09-limits.md
@@ -14,23 +14,23 @@ tags: []
 
 ### 苞谷饭
 
-我家和两位舅公邻居，相比之下，我家的境况还算是不错，因为我家几乎每顿都能吃白米饭，而舅公家，至少是幺舅公家，时常需往米饭里掺入打碎的玉米才能填饱肚子。这种掺了玉米的米饭在我们那里叫苞谷饭，由于大米贵，苞谷便宜，所以境况越不好，苞谷就掺得越多，有时饭里甚至尽是苞谷没有米了。米饭是好东西，苞谷饭不好，这差别是我长大后才知道的，而在那时我只是觉得苞谷饭也挺好吃，以至于有时候不想吃米饭，吵着要吃苞谷饭。有时家里没有现成的苞谷，我若又硬要吃苞谷饭，奶奶就拿一个碗，装上一碗米饭，让我拿到幺舅公家去换一碗苞谷饭来。那时我也不知道为啥要拿米饭去换，也是长大后回想起来才明白其中辛酸---如果我直接去舅公家装一碗苞谷饭走，他们家可能就吃不饱肚子了。    
+我家和两位舅公邻居，相比之下，我家的境况还算是不错，因为我家几乎每顿都能吃白米饭，而舅公家，至少是幺舅公家，时常需往米饭里掺入打碎的玉米才能填饱肚子。这种掺了玉米的米饭在我们那里叫苞谷饭，由于大米贵，苞谷便宜，所以境况越不好，苞谷就掺得越多，有时饭里甚至尽是苞谷没有米了。米饭是好东西，苞谷饭不好，这差别是我长大后才知道的，而在那时我只是觉得苞谷饭也挺好吃，以至于有时候不想吃米饭，吵着要吃苞谷饭。有时家里没有现成的苞谷，我若又硬要吃苞谷饭，奶奶就拿一个碗，装上一碗米饭，让我拿到幺舅公家去换一碗苞谷饭来。那时我不大明白为啥要拿米饭去换，也是长大后回想起来才明白其中辛酸---如果我直接去舅公家装一碗苞谷饭走，他们家可能就吃不饱肚子了。    
 
-苞谷饭里的玉米碎比较硬，所以吃在嘴里有明显的颗粒感，同时泛着一股不同于大米的香味。虽然直接吃蒸好的苞谷饭也挺好，但是我最喜欢的是另外两种吃法：一是用茶泡着吃，二是用油稍微煎一下，把苞谷饭稍微煎出点焦香再吃。泡饭的茶不必是什么好茶，我就直接从家里茶壶里倒，凉的热的都可以，但不能太淡，也不能太涩。苞谷饭泡茶里后，玉米碎会稍微软和点，泡好后玉米香混着茶香，一口气能喝一碗。几年前在名古屋热田神宫附近一家叫蓬莱轩的鳗鱼饭店吃鳗鱼饭，店家上来一壶茶，说可以用来泡着饭吃。我当时又惊又喜，记忆闪回到小时侯吃茶泡苞谷饭的情景，赶紧把饭泡上，但一吃发现和记忆里的味道相差甚远，不免失望。虽然蓬莱轩是家比较有名的鳗鱼饭店，但每每想起，心里只记得对其茶泡饭的失望。   
+苞谷饭里的玉米碎比较硬，所以吃在嘴里有明显的颗粒感，同时泛着一股不同于大米的香味。虽然直接吃蒸好的苞谷饭也挺好，但是我最喜欢的是另外两种吃法：一是用茶泡着吃，二是用油稍微煎一下，把苞谷饭煎出焦香再吃。泡饭的茶不必是什么好茶，我就直接从家里茶壶里倒，凉的热的都可以，但不能太淡，也不能太涩。苞谷饭泡茶里后，玉米碎会稍微软和点，泡好后玉米香混着茶香，一口气能喝一碗。几年前在名古屋热田神宫附近一家叫蓬莱轩的鳗鱼饭店吃鳗鱼饭，店家上来一壶茶，说可以用来泡着饭吃。我当时又惊又喜，记忆闪回到小时侯吃茶泡苞谷饭的情景，赶紧把饭泡上，但一吃发现和记忆里的味道相差甚远，不免失望。虽然蓬莱轩是家比较有名的鳗鱼饭店，但每每想起，心里只记得对其茶泡饭的失望。   
 
 ### 辣椒面
 
-这不是饭也不是菜，就是辣椒面，我隔老远能闻到它的香气。幺舅公家有个大石臼，有时他会用这个石臼磕辣椒面。舅公在他家门口磕辣椒的时候，我在我家这边就能闻到那飘过来的香。这味道像是来自辣椒，但又不只是辣椒，单是闻这味道就让人唾液分泌，食欲大开。我现在回想，觉得舅公可能加了芝麻，花生跟辣椒一起磕，才能磕出这味道。虽然这么想，但也觉得这不大可能，因为当时舅公没有这么阔错。为什么幺舅公家磕辣椒这么香，我问过家人几回，但奇怪的是他们对这事没有什么印象，虽然这在我脑子里记得特别清晰。 
+这不是饭也不是菜，就是辣椒面。幺舅公家有个大石臼，有时他会用这个石臼磕辣椒面。舅公在他家门口磕辣椒的时候，我在我家这边就能闻到那飘过来的香。这味道像是来自辣椒，但又不只是辣椒，单是闻这味道就让人唾液分泌，食欲大开。我现在回想，觉得舅公可能加了芝麻，花生跟辣椒一起磕，才能磕出这味道。虽然这么想，但也觉得这不大可能，因为当时舅公没有这么阔错。为什么幺舅公家磕辣椒这么香，我问过家人几回，但奇怪的是他们对这事没有什么印象，虽然这在我脑子里记得特别清晰。 
 
 ### 青蛙稀饭
 
-青蛙吃害虫，所以我们不能吃青蛙。可惜（幸亏）我明白这个道理是在吃了青蛙稀饭很久以后。幺舅公家大儿子叫润年，我叫他润年表叔。他年纪比我大好几岁，当年可能在上初中，而我可能刚上小学，反正还没有来得及学青蛙吃害虫。润年表叔有个弟弟，叫二桃，年纪比我小一岁。虽然按辈分，二桃也是表叔，但我却不这么叫他，只叫二桃。润年表叔爱钓鱼，常拿着自己用竹子削的鱼竿去河边，一待大半天，能不能钓到鱼得碰运气；有时路过田边，他也回顺便去抓点青蛙。有一次，他逮了几只青蛙，回家后就在他家厨房里忙活，说要做点好东西给我和二桃吃。虽然还是下午，但天已不亮了；虽然天已不亮了，但也没有开灯，厨房里黑黑的。黑黑的厨房里有个黑黑的灶，灶上烧着柴，柴火红亮红亮的，映红了灶上烧着的一口黑黑的锅。锅里有一小碗米，和着烧开的水咕噜咕噜地滚着。不知过了多久，润年表叔端出一碗稀饭来，有点泛灰，可能是柴火灰落了不少进去，而且只有一小碗。我喝了一口，很鲜，里面有一小块白白的肉，被我吃到了，很嫩，心里惊讶世间居然有这么鲜美的东西。现在回想，那可能是块青蛙的大腿肉。后来吃了很多次蛙，有不少是个大肉厚的牛蛙，但都觉得没有那碗稀饭香。另有一回，润年表叔钓了几条河鱼回来，他在鱼身上抹了点盐，然后去地里摘了几片芋头叶裹着鱼烤。那混着芋头叶味儿的鱼香也让我记忆犹新，放佛不久前才吃过；而那已是二十来年前了。
+青蛙吃害虫，所以我们不能吃青蛙。可惜（幸亏）我明白这个道理是在吃了青蛙稀饭很久以后。幺舅公家大儿子叫润年，我叫他润年表叔。他年纪比我大好几岁，当年可能在上初中，而我可能刚上小学，反正还没有来得及学青蛙吃害虫。润年表叔有个弟弟，叫二桃，年纪比我小一岁。虽然按辈分，二桃也是表叔，但我却不这么叫他，只叫二桃。润年表叔爱钓鱼，常拿着自己用竹子削的鱼竿去河边，一待大半天，能不能钓到鱼得碰运气；有时路过田边，他也会顺便去抓点青蛙。有一次，他逮了几只青蛙，回家后就在他家厨房里忙活，说要做点好东西给我和二桃吃。虽然还是下午，但天已不亮了；虽然天已不亮了，但也没有开灯，厨房里黑黑的。黑黑的厨房里有个黑黑的灶，灶上烧着柴，柴火红亮红亮的，映红了灶上烧着的一口黑黑的锅。锅里有一小碗米，和着烧开的水咕噜咕噜地滚着。不知过了多久，润年表叔端出一碗稀饭来，有点泛灰，可能是柴火灰落了不少进去，而且只有一小碗。我喝了一口，很鲜，里面有一小块白白的肉，被我吃到了，很嫩，心里惊讶世间居然有这么鲜美的东西。现在回想，那可能是块青蛙的大腿肉。后来吃了很多次蛙，有不少是个大肉厚的牛蛙，但都觉得没有那碗稀饭香。另有一回，润年表叔钓了几条河鱼回来，他在鱼身上抹了点盐，然后去地里摘了几片芋头叶裹着鱼烤。那混着芋头叶味儿的鱼香也让我记忆犹新，放佛不久前才吃过；而那已是二十来年前了。
 
 ### 豌豆尖蛋汤
 
 豌豆尖是豌豆顶端的嫩叶子，当季的时候，去自家地里采了就能做汤喝，我最喜欢的是豌豆尖蛋汤。拿两个鸡蛋加盐打散，锅里加块猪油热化，然后把鸡蛋倒进热油锅里煎。农村火大，锅大，鸡蛋下锅就滋滋地膨胀开来。这时往锅里加水，烧开后把豌豆尖放进去，一烫就熟。出锅前加点盐调汤味就可以了。可能是加了猪油的缘故，煮好的汤泛白，看起来浓浓的；豌豆尖的清香配鸡蛋很合适，何况是刚从地里采的，又嫩又新鲜。吃了鸡蛋和豌豆尖，再倒上一碗汤泡饭...唉，饿了。     
 
-现在下厨，各种肉，菜都不缺了，时常也能做出好吃的菜肴，大快朵颐一番，但没有一个像那些小时候的那些味道让我记在心里，念念不忘。我也没有尝试去复现那些味道，因为我知道记忆是最会骗人的，当初不一定如我记得那般好；我也不会尝试去复现那些味道，因为我知道即使当初确实如我记得的那么好，但我已不是那个捧着猪油饭，希望把每个含着香气的分子都吸进鼻子的孩子了。
+现在下厨，各种肉，菜都不缺了，时常能做出好吃的菜肴，大快朵颐一番，但没有一个像那些小时候的那些味道让我记在心里，念念不忘。我也没有尝试去复现那些味道，因为我知道记忆是最会骗人的，当初不一定如我记得那般好；我也不会尝试去复现那些味道，因为我知道即使当初确实如我记得的那么好，但我已不是那个捧着猪油饭，希望把每个含着香气的分子都吸进鼻子的孩子了。
 
 
 
