--- a/content/cn/2020-05-09-limits.md
+++ b/content/cn/2020-05-09-limits.md
@@ -14,13 +14,13 @@ tags: []
 
 ### 苞谷饭
 
-我家和两位舅公邻居，相比之下，我家的境况还算是不错，因为我家几乎每顿都能吃白米饭，而舅公家，至少是幺舅公家，时常需往米饭里掺入打碎的玉米才能填饱肚子。这种掺了玉米的米饭在我们那里叫苞谷饭，由于大米贵，苞谷便宜，所以境况越不好，苞谷就掺得越多，有时饭里甚至尽是苞谷没有米了。米饭是好东西，苞谷饭不好，这差别是我长大后才知道的，而在那时我只是觉得苞谷饭也挺好吃，以至于有时候不想吃米饭，吵着要吃苞谷饭。有时家里没有现成的苞谷，我若又硬要吃苞谷饭，奶奶就拿一个碗，装上一碗米饭，让我拿到幺舅公家去换一碗苞谷饭来。那时我不大明白为啥要拿米饭去换，也是长大后回想起来才明白其中辛酸---如果我直接去舅公家装一碗苞谷饭走，他们家可能就吃不饱肚子了。    
+我家和两位舅公邻居，相比之下，我家的境况还算是不错，因为我家几乎每顿都能吃白米饭，而舅公家，至少是幺舅公家，时常需往米饭里掺入打碎的玉米才能填饱肚子。这种掺了玉米的米饭在我们那里叫苞谷饭，由于大米贵，苞谷便宜，所以境况越不好，苞谷就掺得越多，有时饭里甚至尽是苞谷没有米了。米饭是好东西，苞谷饭不好，这差别是我长大后才知道的，而在那时我只是觉得苞谷饭也挺好吃，以至于有时候不想吃米饭，吵着要吃苞谷饭。有时家里没有现成的苞谷，我若又硬要吃，奶奶就拿一个碗，装上一碗米饭，让我拿到幺舅公家去换一碗苞谷饭来。那时我不大明白为啥要拿米饭去换，也是长大后回想起来才明白其中辛酸---如果我直接去舅公家装一碗苞谷饭走，他们家可能就吃不饱肚子了。    
 
-苞谷饭里的玉米碎比较硬，所以吃在嘴里有明显的颗粒感，同时泛着一股不同于大米的香味。虽然直接吃蒸好的苞谷饭也挺好，但是我最喜欢的是另外两种吃法：一是用茶泡着吃，二是用油稍微煎一下，把苞谷饭煎出焦香再吃。泡饭的茶不必是什么好茶，我就直接从家里茶壶里倒，凉的热的都可以，但不能太淡，也不能太涩。苞谷饭泡茶里后，玉米碎会稍微软和点，泡好后玉米香混着茶香，一口气能喝一碗。几年前在名古屋热田神宫附近一家叫蓬莱轩的鳗鱼饭店吃鳗鱼饭，店家上来一壶茶，说可以用来泡着饭吃。我当时又惊又喜，记忆闪回到小时侯吃茶泡苞谷饭的情景，赶紧把饭泡上，但一吃发现和记忆里的味道相差甚远，不免失望。虽然蓬莱轩是家比较有名的鳗鱼饭店，但每每想起，心里只记得对其茶泡饭的失望。   
+苞谷饭里的玉米碎比较硬，所以吃在嘴里有明显的颗粒感，同时泛着一股不同于大米的香味。虽然直接吃蒸好的苞谷饭也挺好，但是我最喜欢的是另外两种吃法：一是用茶泡着吃，二是用油稍微煎一下，把苞谷饭煎出焦香再吃。泡饭的茶不必是什么好茶，我就直接从家里茶壶里倒，凉的热的都可以，但不能太淡，也不能太涩。苞谷饭泡茶里后，玉米碎会稍微软和点，泡好后玉米香混着茶香，一口气能喝一碗。几年前在名古屋热田神宫附近一家叫蓬莱轩的鳗鱼饭店吃鳗鱼饭，店家上来一壶茶，说可以用来泡着饭吃。我当时又惊又喜，记忆闪回到小时侯吃茶泡苞谷饭的情景，赶紧把饭泡上，但一吃发现和记忆里的味道相差甚远。虽然蓬莱轩是家比较有名的鳗鱼饭店，但每每想起，心里只记得对其茶泡饭的失望。   
 
 ### 辣椒面
 
-这不是饭也不是菜，就是辣椒面。幺舅公家有个大石臼，有时他会用这个石臼磕辣椒面。舅公在他家门口磕辣椒的时候，我在我家这边就能闻到那飘过来的香。这味道像是来自辣椒，但又不只是辣椒，单是闻这味道就让人唾液分泌，食欲大开。我现在回想，觉得舅公可能加了芝麻，花生跟辣椒一起磕，才能磕出这味道。虽然这么想，但也觉得这不大可能，因为当时舅公没有这么阔错。为什么幺舅公家磕辣椒这么香，我问过家人几回，但奇怪的是他们对这事没有什么印象，虽然这在我脑子里记得特别清晰。 
+这不是饭也不是菜，就是辣椒面。幺舅公家有个大石臼，有时他会用这个石臼磕辣椒面。舅公在他家门口磕辣椒的时候，我在我家这边就能闻到那飘过来的香。这味道像是来自辣椒，但又不只是辣椒；单是闻这味道就让人唾液分泌，食欲大开。我现在回想，觉得舅公可能加了芝麻，花生跟辣椒一起磕，才能磕出这味道。虽然这么想，但也觉得这不大可能，因为当时舅公没有这么阔错。为什么幺舅公家磕辣椒这么香，我后来问过家人几回，但奇怪的是他们对这事没有什么印象，虽然这在我脑子里记得特别清晰。 
 
 ### 青蛙稀饭
 
