--- a/content/cn/2020-05-09-limits.md
+++ b/content/cn/2020-05-09-limits.md
@@ -24,7 +24,7 @@ tags: []
 
 ### 青蛙稀饭
 
-青蛙吃害虫，所以我们不能吃青蛙。可惜（幸亏）我明白这个道理是在吃了青蛙稀饭很久以后。幺舅公家大儿子叫润年，我叫他润年表叔。他年纪比我大好几岁，当年可能在上初中，而我可能刚上小学，反正还没有来得及学青蛙吃害虫。润年表叔有个弟弟，叫二桃，年纪比我小一岁。虽然按辈分，二桃也是表叔，但我却不这么叫他，只叫二桃。润年表叔爱钓鱼，常拿着自己用竹子削的鱼竿去河边，一待大半天，能不能钓到鱼得碰运气；有时路过田边，他也会顺便去抓点青蛙。有一次，他逮了几只青蛙，回家后就在他家灶房里忙活，说要做点好东西给我和二桃吃。虽然还是下午，但天已不亮了；虽然天已不亮了，但也没有开灯，房灶里黑黑的。黑黑的灶房里有个黑黑的灶，灶上烧着柴，柴火红亮红亮的，映红了灶上烧着的一口黑黑的锅。锅里煮着一小碗米，和着烧开的水咕噜咕噜地翻滚着。不知过了多久，润年表叔端出一碗稀饭来，有点泛灰，可能是柴火灰落了不少进去，而且只有一小碗。我喝了一口，很鲜，里面有一小块白白的肉，被我吃到了，很嫩，心里惊讶世间居然有这么美味的东西。现在回想，那可能是块青蛙的大腿肉。后来吃了很多次蛙，有不少是个大肉厚的牛蛙，但都觉得没有那碗稀饭香。另有一回，润年表叔钓了几条河鱼回来，他在鱼身上抹了点盐，然后去地里摘了几片芋头叶裹着鱼烤。那混着芋头叶味儿的鱼香也让我记忆犹新，放佛不久前才吃过；而那已是二十来年前了。
+青蛙吃害虫，所以我们不能吃青蛙。可惜（幸亏）我明白这个道理是在吃了青蛙稀饭很久以后。幺舅公家大儿子叫润年，我叫他润年表叔。他年纪比我大好几岁，当年可能在上初中，而我可能刚上小学，反正还没有来得及学青蛙吃害虫。润年表叔有个弟弟，叫二桃，年纪比我小一岁。虽然按辈分，二桃也是表叔，但我却不这么叫他，只叫二桃。润年表叔爱钓鱼，常拿着自己用竹子削的鱼竿去河边，一待大半天，能不能钓到鱼得碰运气；有时路过田边，他也会顺便去抓点青蛙。有一次，他逮了几只青蛙，回家后就在他家灶房里忙活，说要做点好东西给我和二桃吃。虽然还是下午，但天已不亮了；虽然天已不亮了，但也没有开灯，灶房里黑黑的。黑黑的灶房里有个黑黑的灶，灶上烧着柴，柴火红亮红亮的，映红了灶上烧着的一口黑黑的锅。锅里煮着一小碗米，米粒和着烧开的水咕噜咕噜地翻滚着。不知过了多久，润年表叔端出一碗稀饭来，有点泛灰，可能是柴火灰落了不少进去，而且只有一小碗。我喝了一口，很鲜，里面有一小块白白的肉，被我吃到了，很嫩，心里惊讶世间居然有这么美味的东西。现在回想，那可能是块青蛙的大腿肉。后来吃了很多次蛙，有不少是个大肉厚的牛蛙，但都觉得没有那碗稀饭香。另有一回，润年表叔钓了几条河鱼回来，他在鱼身上抹了点盐，然后去地里摘了几片芋头叶裹着鱼烤。那混着芋头叶味儿的鱼香也让我记忆犹新，放佛不久前才吃过；而那已是二十来年前了。
 
 ### 豌豆尖蛋汤
 
