--- a/content/cn/2020-05-09-limits.md
+++ b/content/cn/2020-05-09-limits.md
@@ -10,7 +10,7 @@ tags: []
 
 ### 猪油拌饭
 
-当时没有电饭煲，蒸米饭得先煮米，米煮好了再转到一个木甄子里去蒸。虽然麻烦，但却有个好处，那就是有米汤喝。蒸不了多久，甄子里就开始溢出米香，渐浓，预示着开饭的时间近了。米饭蒸熟了，有时我奶奶会先给我盛上一碗，然后从猪油罐子里挑一块白白的猪油抹在热气腾腾的米饭上，再散点盐，并用筷子拌匀。随着搅拌，猪油慢慢化在米饭里头，于是碗里散发出二者混合后产生的奇异香味。拌好后，奶奶就把碗递给我，说：“油（儿）饭好了，吃吧。”混着猪油的米粒很滑润，但却不腻，不用就菜，一口就能吃一大勺子的米饭，咸香满口。忘记了什么情况下会有猪油拌饭吃了，反正肯定不是每顿都有。
+当时没有电饭煲，蒸米饭得先煮米，米煮好了再转到一个木甑子里去蒸。虽然麻烦，但却有个好处，那就是有米汤喝。蒸不了多久，甑子里就开始溢出米香，渐浓，预示着开饭的时间近了。米饭蒸熟了，有时我奶奶会先给我盛上一碗，然后从猪油罐子里挑一块白白的猪油抹在热气腾腾的米饭上，再散点盐，并用筷子拌匀。随着搅拌，猪油慢慢化在米饭里头，于是碗里散发出二者混合后产生的奇异香味。拌好后，奶奶就把碗递给我，说：“油（儿）饭好了，吃吧。”混着猪油的米粒很滑润，但却不腻，不用就菜，一口就能吃一大勺子的米饭，咸香满口。忘记了什么情况下会有猪油拌饭吃了，反正肯定不是每顿都有。
 
 ### 苞谷饭
 
