--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -50,7 +50,7 @@ tags: []
 
 > 但当这种期望流于对过去观念不假思索的批判，乃至走向虚无与达达主义时，便值得警惕了。与秩序的落差、错位向来不能为越矩的行为张本。而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚。　  
 
-先看第一句，“期望”如何流于“批判”，又如何走向虚无与达达二主义？这种行文简直让然摸不着头脑。细分析这句话，我想作者要表达的意思应该是：当这种期望受挫，心里生出的不满容易导致对过去观念的批判，使得自己走向虚无与达达主义。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成还是第三局？），落差和错位如何为“越矩行为”张本？这句话也不容易看懂，我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些行为是由于感到了理想与现实间的落差造成的，事出有因，但这不能成为做出那些行为的理由。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子.我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。   
+先看第一句，“期望”如何流于“批判”，又如何走向虚无与达达二主义？这种行文简直让然摸不着头脑。细分析这句话，我想作者要表达的意思应该是：当这种期望受挫，心里生出的不满容易导致对过去观念的批判，使得自己走向虚无与达达主义。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成还是第三局？），落差和错位如何为“越矩行为”张本？这句话也不容易看懂，我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些行为是由于感到了理想与现实间的落差造成的，事出有因，但这不能成为做出那些行为的理由。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
 
 下一段：   
 
@@ -58,7 +58,7 @@ tags: []
 
 来了，来了，又是个看不懂的词，“薄脊”。这是个放狗都搜不出来的词。想来作者心中可能思绪万千，平素大家用的那些“庸脂俗粉”已不足以表其万一，得自己造词来形容了。不仅“薄脊”一句看不懂，其它部分我也看不懂，比如家庭和社会为何成了“符号客体”，用这样的词是要表达什么？当然，我也不知道什么叫作“偏见的傲慢”，结合前文，我感觉作者要表达的可能是“出于无知的傲慢”吧；而啥叫“知性的”傲慢，我是猜都猜不出来了。   
 
-写到这里，我不禁自觉先前想将这篇文章“捋一捋”的想法有点天真了。我高估了这“满分作文”的水平，低估了做这事的难度；梳理还未过半，已经觉得有点累且无聊了。往下一看，不通的句子和混乱的词语搭配接踵而至，让我望而生畏。先深呼吸一口，再捉几个显眼的吧。比如说，什么叫“对自己的期望本就是在与家庭与社会对接中塑型的动态过程”，“观念”如何又是“实践的”？“倘若我们在对过往借韦伯之言‘祓魅’，又对不断膨胀的自我进行‘赋魅’，那么在丢失外界预期的同时，未尝也不是丢了自我。”韦伯之言是啥？之前提过吗？啥叫“祓魅”，啥叫“赋魅”大家就别问了，问就是“量子力学”（这是一个朋友的口头禅，借用一下）。    
+写到这里，我不禁自觉先前想将这篇文章“捋一捋”的想法有点天真了。我高估了这“满分作文”的水平，低估了做这事的难度；梳理还未过半，已经觉得有点累且无聊了。往下一看，不通的句子和混乱的词语搭配接踵而至，让我望而生畏。先深呼吸一口，再捉几个显眼的吧。比如说，什么叫“对自己的期望本就是在与家庭与社会对接中塑型的动态过程”，拿人话说，应该是“自己的理想不断与家庭和社会的期许对接，磨合，这是个动态的过程，而我们对自己的期待就是在这么个磨合的过程中被塑形的”；下一个，“观念”如何又是“实践的？”在下一个，“倘若我们在对过往借韦伯之言‘祓魅’，又对不断膨胀的自我进行‘赋魅’，那么在丢失外界预期的同时，未尝也不是丢了自我。”韦伯之言是啥？之前提过吗？啥叫“祓魅”，啥叫“赋魅”大家就别问了，问就是“量子力学”（这是一个朋友的口头禅，借用一下）。    
 
 唉，又熬过了一段，不容易。可刚松口气，低头一看，下一段胡言乱语又来了：
 
