--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -34,7 +34,7 @@ tags: []
 
 这篇文章用了很多生僻的字词，行文晦涩，还引了几个听起来很厉害的人的话；这种让人一看不懂，再看似乎有点道理的东西很唬人。我们费点神把这文章捋一捋吧。   
 
-文章用“现代社会以海德格尔的一句‘一切实践传统都已经瓦解完了’为嚆矢”开篇。这语气肯定，自信，不容辩驳，还搬出了海德格尔这么一个大神站台，吓得一些读者不敢动弹。开句本已霸气侧漏，再用“嚆矢”这两个很多人不认识的字结尾，这第一句话就击溃了很多人的心里防线，让这文章在他们眼里自带光环---也就是“俗称”的“赋魅”了。随便一开头就有如此乾坤景象，让人惊叹；不过，朋友们，别惊讶太早，这才是第一句呐。   
+文章用“现代社会以海德格尔的一句‘一切实践传统都已经瓦解完了’为嚆矢”开篇。这语气肯定，自信，不容辩驳，还搬出了海德格尔这么一个大神站台，吓得一些读者不敢动弹。开句本已霸气侧漏，再用“嚆矢”这两个很多人不认识的字结尾，这第一句话就击溃了很多人的心里防线，让这文章在他们眼里自带光环---也就是“俗称”的“赋魅”了。随便一开头就有如此乾坤景象，让人惊叹；不过，朋友们，别将惊讶太早用完，这才是第一句呐。   
 
 如果在震惊之于我们还有空细想的话，问题就来了：海德格尔说过这句话吗？我多少看过些海德格尔的文字，就没想起来有这么一句。虽然可能是我读书少，但我想这至少是可以存疑的吧。看下去，“嚆矢”是啥？一查，其实就是能发出响声的箭。由于声速比箭速快，所以这种箭发出时，人们一般都是耳朵先听到响，然后屁股才感到疼，所以以喻“先声”。这词我在日语里见过，还真没有印象谁在中文写作里用过它。我太孤陋寡味了吧。   
 
