--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -58,7 +58,7 @@ tags: []
 
 来了，来了，又是个看不懂的词，“薄脊”。这是个放狗都搜不出来的词。想来作者心中可能思绪万千，平素大家用的那些“庸脂俗粉”已不足以表其万一，得自己造词来形容了。不仅“薄脊”一句看不懂，其它部分我也看不懂，比如家庭和社会为何成了“符号客体”，用这样的词是要表达什么？当然，我也不知道什么叫作“偏见的傲慢”，结合前文，我感觉作者要表达的可能是“出于无知的傲慢”吧；而啥叫“知性的”傲慢，我是猜都猜不出来了。   
 
-写到这里，我不禁自觉先前想将这篇文章“捋一捋”的想法有点天真了。我高估了这“满分作文”的水平，低估了做这事的难度；梳理还未过半，已经觉得有点累且无聊了。往下一看，不通的句子和混乱的词语搭配接踵而至，让我望而生畏。先深呼吸一口，再捉几个显眼的吧。比如说，什么叫“对自己的期望本就是在与家庭与社会对接中塑型的动态过程”，拿人话说，应该是“自己的理想不断与家庭和社会的期许对接，磨合，这是个动态的过程，而我们对自己的期待就是在这么个磨合的过程中被塑形的”；下一个，“观念”如何又是“实践的？”在下一个，“倘若我们在对过往借韦伯之言‘祓魅’，又对不断膨胀的自我进行‘赋魅’，那么在丢失外界预期的同时，未尝也不是丢了自我。”韦伯之言是啥？之前提过吗？啥叫“祓魅”，啥叫“赋魅”大家就别问了，问就是“量子力学”（这是一个朋友的口头禅，借用一下）。    
+写到这里，我不禁自觉先前想将这篇文章“捋一捋”的想法有点天真了。我高估了这“满分作文”的水平，低估了做这事的难度；梳理还未过半，已经觉得有点累且无聊了。往下一看，不通的句子和混乱的词语搭配接踵而至，让我望而生畏。先深呼吸一口，再捉几个显眼的吧。比如说，什么叫“对自己的期望本就是在与家庭与社会对接中塑型的动态过程”，拿人话说，应该是“自己的理想不断与家庭和社会的期许对接，磨合，这是个动态的过程，而我们对自己的期待就是在这么个磨合的过程中被塑形的”；下一个，“观念”如何又是“实践的？”观念就是观念，按某观念的指导行动，才叫实践；我们可以实践某观念，但观念不能是“实践的”，除非作者重新定义这个形容词。再下一个，“倘若我们在对过往借韦伯之言‘祓魅’，又对不断膨胀的自我进行‘赋魅’，那么在丢失外界预期的同时，未尝也不是丢了自我。”韦伯之言是啥？之前提过吗？啥叫“祓魅”，啥叫“赋魅”大家就别问了，问就是“量子力学”（这是一个朋友的口头禅，借用一下）。    
 
 唉，又熬过了一段，不容易。可刚松口气，低头一看，下一段胡言乱语又来了：
 
