--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -18,7 +18,7 @@ tags: []
 对此，你有怎样的体验与思考？写一篇文章，谈谈自己的看法。  
 [注意]①角度自选，立意自定，题目自拟。②明确文体，不得写成诗歌。③不得少于800字。④不得抄袭、套作。
 
-“个人与家庭、社会之间的落差或错位难免会产生”，这句是病句。“个人”和“家庭、社会”间哪来落差？“个人的理想”和“家庭、社会的期许”之间才有落差吧？另外，“落差”暗示有高低之别，而这里着重的“分歧”吧。这题目不大通，不过暂不纠结于此了。   
+“个人与家庭、社会之间的落差或错位难免会产生”，这句是病句。“个人”和“家庭、社会”间哪来落差？“个人的理想”和“家庭、社会的期许”之间才有落差吧？另外，“落差”暗示有高低之别，而这里着重的是“分歧”吧。这题目不大通，不过暂不纠结于此了。   
 
 浙江一考生就此题目写了一篇题为《生活在树上》的作文，如下：
 
