--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -42,7 +42,7 @@ tags: []
 
 “滥觞”未尽，第三句已至：“但面对看似无垠的未来天空，我想循卡尔维诺“树上的男爵”的生活好过过早地振翮。”卡，卡什么诺？男，男什么爵？振，振什么翮？我承认我不知道卡尔维诺是谁，更没有看过“树上的男爵”，振那啥“翮”也是放狗搜了才明白是要“飞”的意思。用了这么些不凡的材料，作者表达了什么了不起的意思吗？我没看出来，其实他就是说，人嘛，既要心怀理想，又要考虑现实，不要没事儿随便浪。   
 
-据说罗素在他五岁时曾想：如果我能活到70岁，那我到现在才捱过我全部生命的十四分之一，我觉得面前漫长的无聊生涯简直难以忍受。文章看到这里，第一段才结束，后边还有六段，时间放佛停下了脚步。如此挣扎后，发现这篇文章才看完七分之一时，内心的悲伤和罗素大人是一样一样的。    
+据说罗素在他五岁时曾想：如果我能活到70岁，那我到现在才捱过我全部生命的十四分之一，我觉得面前漫长的无聊生涯简直难以忍受。文章看到这里，第一段才结束，后边还有六段，时间放佛停下了脚步；一番挣扎后，发现这篇文章才看完七分之一，我内心的悲伤和罗素大人是一样一样的。    
 
 为了让悲伤的心好过点，我决定不再逐句地“品”下去了，步子迈大点吧。不过下一句还是要单独拎出来说一下：“我们怀揣热忱的灵魂天然被赋予对超越性的追求，不屑于古旧坐标的约束，钟情于在别处的芬芳。”这句为什么要单独拎出来呢？因为它展现了作者的“哲学”气质，其蕴于对“超越性”的追求中。“超越性”是什么？这是不好说清楚的。我们看得见摸得着的东西是不“超越”的，因为它们实在且有限；“超越”的东西是无形的，因其无形，固能永恒，所以谓之“超越”。这实在是个很“哲学”的概念，这概念本不空洞，但容易被人“空洞地”使用。作者在这里用得空不空洞，大家自行判断吧。接着，作者表明自己不屑这追求被“古旧坐标”约束，“钟情于在别处的芬芳”。这后半句里，“于”和“在”似乎用重复了。这虽然不是什么大问题，但出现在一篇满分作文里还是挺扎眼。   
 
@@ -78,7 +78,7 @@ tags: []
 
 终于捋完了。
 
-这样一篇不通的文章为何能得满分，我实在想不通。阅卷老师难道是被海德格尔，维特根斯坦给吓到了？还是作者便秘式的文风让老师们心生同情，觉得生活已经如此艰难，大家就不要再拆穿？大家都不容易，这样烂的文章拿满分对其它考生公平吗？这样的文章若被当作“好”东西宣传，被不谙世事的低年级学生模仿，带出一帮子怪胎文章，这个责任谁来负？这位作者把文章写成这样可能是他性格和能力的问题，其过不大；但阅卷老师把这种文章推出来表彰、讨论，居心何在？
+这样一篇矫揉造作，滥用词语，多数句子不通的文章为何能得满分，我实在想不通。阅卷老师难道是被海德格尔，维特根斯坦给吓到了？还是作者便秘式的文风让老师们心生同情，觉得生活已经如此艰难，大家就不要再拆穿？都不容易，这样烂的文章拿满分，这对其它考生公平吗？这样的文章若被当作“好”东西宣传，被不谙世事的低年级学生模仿，带出一帮子怪胎文章，这个责任谁来负？这位作者把文章写成这样可能是他性格和能力的问题，其过不大；但阅卷老师把这种文章推出来表彰、讨论，居心何在？
 
 
 
