--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -50,7 +50,7 @@ tags: []
 
 > 但当这种期望流于对过去观念不假思索的批判，乃至走向虚无与达达主义时，便值得警惕了。与秩序的落差、错位向来不能为越矩的行为张本。而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚。　  
 
-先看第一句，“期望”如何流于“批判”，又如何走向虚无与达达二主义？这种行文简直让然摸不着头脑。细分析这句话，我想作者要表达的意思应该是：当这种期望受挫，心里生出的不满容易导致对过去观念的批判，使得自己走向虚无与达达主义。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成还是第三局？），落差和错位如何为“越矩行为”张本？这句话也不容易看懂，我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些行为是由于感到了理想与现实间的落差造成的，事出有因，但这不能成为做出那些行为的理由。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
+先看第一句，“期望”如何流于“批判”，难道作者对未来的“期盼”就是批判老观念？从上下文推测似乎不是这样；而这期望又如何走向虚无与达达二主义，难道作者期望成为虚无主义者？从上下文推断似乎也不像。坦白说，这种行文简直让然摸不着头脑。细分析这句话，我想作者要表达的意思应该是：当自己对未来的期望和家庭和社会对自己的期许间有了分歧，使自己实现理想受到了阻挠，那心中生出的不满容易导致对老观念的批判，并让自己走向虚无与达达主义。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成还是第三局？），落差和错位如何为“越矩行为”张本？这句话也不容易看懂，我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些行为是由于感到了理想与现实间的落差造成的，事出有因，但这不能成为做出那些行为的理由。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
 
 下一段：   
 
