--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -74,7 +74,7 @@ tags: []
 
 最后一段。   
 
-如果不纠结何为“婞直”，何为“单向度”，也不问为何“遗世独立”就成了“单向度形象”，那最后一段也不算难懂；但若是要纠结，那这一段也形同天书了。好在作者在字里行间多少还留了些余地给我们喘息，这大概就是作者的“温柔”吧。    
+如果不纠结何为“婞直”（其实就是倔强），何为“单向度”（其实就是无批判精神），也不问为何“遗世独立”就成了“单向度形象”（“遗世独立”和“单向度”间隔了十万八千里，怎么放一起去的？），那最后一段也不算难懂；但若是要纠结，那这一段也形同天书了。好在作者在字里行间多少还留了些余地给我们喘息，这大概就是作者的“温柔”吧。    
 
 终于捋完了。
 
