--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -32,15 +32,15 @@ tags: []
 
 拿了满分的就是这篇文章。  
 
-这篇文章用了很多生僻的字词，行文晦涩，还引了几个听起来很厉害的人的话；这种让人一看不懂，再看似乎有点道理的东西很唬人。我们费点神把这文章捋一捋吧。   
+这篇文章用了很多生僻的字词，行文晦涩，还引了几个听起来很厉害的人的话---这种让人一看不懂，再看似乎有点道理的东西很唬人。我们费点神把这文章捋一捋吧。   
 
 文章用“现代社会以海德格尔的一句‘一切实践传统都已经瓦解完了’为嚆矢”开篇。这语气肯定，自信，不容辩驳，还搬出了海德格尔这么一个大神站台，吓得一些读者不敢动弹。开句本已霸气侧漏，再用“嚆矢”这两个很多人不认识的字结尾，这第一句话就击溃了很多人的心里防线，让这文章在他们眼里自带光环---也就是“俗称”的“赋魅”了。随便一开头就有如此乾坤景象，让人惊叹；不过，朋友们，别将惊讶太早用完，这才是第一句呐。   
 
-如果在震惊之于我们还有空细想的话，问题就来了：海德格尔说过这句话吗？我多少看过些海德格尔的文字，就没想起来有这么一句。虽然可能是我读书少，但我想这至少是可以存疑的吧。看下去，“嚆矢”是啥？一查，其实就是能发出响声的箭。由于声速比箭速快，所以这种箭发出时，人们一般都是耳朵先听到响，然后屁股才感到疼，所以以喻“先声”。这词我在日语里见过，还真没有印象谁在中文写作里用过它。我太孤陋寡味了吧。   
+不过，如果在震惊之于我们还有空想一想，那问题就来了：海德格尔说过这句话吗？我多少看过些海德格尔的文字，就没想起来有这么一句。虽然可能是我读书少，但我想这至少是可以存疑的吧。看下去，“嚆矢”是啥？一查，其实就是能发出响声的箭。由于声速比箭速快，所以这种箭发出时，人们一般都是耳朵先听到响，然后屁股才感到疼，所以以喻“先声”。这词我在日语里见过，还真没有印象谁在中文写作里用过它。我太孤陋寡味了吧。   
 
 看完第一句，惊魂还未定，第二句又来了：“滥觞于家庭与社会传统的期望正失去它们的借鉴意义。”滥觞啥？一查，哦，是“起源”的意思啊。好吧，咱读书少，咱认。但自个儿惭愧完了一想，好像有点~~妖气~~问题。啥叫“起源于”家庭和社会的期望？直接说“家庭和社会的期望”不行吗？若是非要强调这期望的“出处”，那写成“来自家庭与社会的期望”如何？作者的这种写法在我看来跟把水称作一氧化二氢没啥区别，就是不说人话。      
 
-“滥觞”未尽，第三句已至：“但面对看似无垠的未来天空，我想循卡尔维诺“树上的男爵”的生活好过过早地振翮。”卡，卡什么诺？男，男什么爵？振，振什么翮？我承认我不知道卡尔维诺是谁，更没有看过“树上的男爵”，振那啥“翮”也是放狗搜了才明白是要“飞”的意思。用了这么些不凡的材料，作者表达了什么了不起的意思吗？我没看出来，其实他就是说，人嘛，既要心怀理想，又要考虑现实，不要没事儿随便浪。   
+“滥觞”未尽，第三句已至：“但面对看似无垠的未来天空，我想循卡尔维诺“树上的男爵”的生活好过过早地振翮。”卡，卡什么诺？男，男什么爵？振，振什么翮？我承认我不知道卡尔维诺是谁，更没有看过“树上的男爵”，振那啥“翮”也是放狗搜了才明白是要“飞”的意思。用了这么些不凡的材料，作者表达了什么了不起的意思吗？我没看出来，其实他就是说，人嘛，既要心怀理想，又要考虑现实，不要没事儿随便浪。文章除了要达意，音韵美也是要顾一下的，大家发声读读这句话，难受不？     
 
 据说罗素在他五岁时曾想：如果我能活到70岁，那我到现在才捱过我全部生命的十四分之一，我觉得面前漫长的无聊生涯简直难以忍受。文章看到这里，第一段才结束，后边还有六段，时间放佛停下了脚步；一番挣扎后，发现这篇文章才看完七分之一，我内心的悲伤和罗素大人是一样一样的。    
 
